--- a/5.md
+++ b/5.md
@@ -1,2 +1,90 @@
+**第五讲**
 
+我想介绍一位来自“为美国而教”的代表。这个组织一直致力于做好事，在世界上宣扬善。我想···这门课，过去两年一直向他们提供支持，我们希望继续下去。有请···
+
+大家好！能听到吗？非常感谢，我只占用90秒，我叫Josh，Bieber，好的，我感觉很好。我是为美国而教的成员，现在为组织工作，负责新址开展。大四时，我勉强认为这是个机会，招聘到期日，固执的组织招募人员，打来电话，听电话时我差点睡着，我本不会应聘，但我还是磨蹭了两小时完成短文，多亏那个打来电话的人，这是我人生最美好，最快乐的两年。
+
+请再给我一分钟，希望大家对组织有两个了解，我想你们知道组织的目的。一是这个国家对学校里的，孩子们的教育是不平等的，低收入孩子在离开小学前，已落后多年，其中不到一半能高中毕业，这非常不公正，完全的不公正。二，你们能带来改变，我开始也怀疑组织，和自己的能力，但我知道这是真的。如果你走进一个五年级教室，学生们从第一天开始就落后很多，恨学校，因此也恨你。九个月后，他们成绩优异，恳求更多作业，希望与你共度周未，让你觉得一切都有可能。我在此足以说明，“为美国而教”对我来说是一个真正让我实现想法和希望的地方，参与实现我们都想见到的改变。我愿意鼓励所有同学，不管你们计划明年做什么，请大家超越那些想法，考虑这个机会。它是我可能做过的最好的事，最后期限是明天，很容易做，不需要推荐，申请就行，给自己机会，像我一样爱上这份工作，最后我想说，现在坐在教室里的同学们，可能获得同龄人中最好的教育，世界上最好的教育，我们的学生和学校需要你们，请加入我们，感谢给我的时间，祝大家上堂精彩的课。
+
+大家好，只说几句。如果这里有公开课学生或本科生，不能在这周来上课的，今晚七点半有一堂开放课，是为公开课学员制作的录像，有时间和兴趣上课的，请在课后来找我，谢谢！现在我想介绍两位挚友，积极心理学的支持者，可能比任何人，更致力推广积极心理学。以严谨和有趣的方式，我请他们简单介绍一下。宾州大学应用积极心理学硕士课程，唯一的硕士学位，世界上第一个硕士学位，目前还有其他几个。他们会简单介绍一下，利用15分钟时间，介绍一下硕士课程，然后再开始今天的课程，希望让人兴奋，有请James和Debbie。
+
+非常感谢，很高兴能来到这里，和你们共度几分钟，真是乐事。在这样特别的课堂上，在这里你们将积极心理学的科学，和应用合二为一。当然你们很快就知道，Tal是位杰出的教授，能把复杂的概念，变得简单易懂，又不过份简单，而且发人深省，让讲座富于感召力，使我们想出去应用学到的理念。我想知道有多少人，对将积极心理学应用于，生活中感兴趣，请举手。好，很好。有多少人选择这门课，是因为有兴趣在未来事业中，应用积极心理学，在工作中。好的，很好，好极了！希望你们起码能那么做，那些有兴趣，深入学习积极心理学的学生，在研究生程度课程获取知识，但同样能够，将所学带入事业。我们很高兴能够向你们介绍，一下宾州大学的，积极心理学硕士课程。谈谈将积极心理学，从课堂带向世界。
+
+你们知道积极心理学刚刚诞生十年，始于1998年。Martin Seligman，美国心理学协会当时的主席，积极心理学是他主持开创的。四年前，Martin Seligman创办积极心理学中心，在宾州大学。积极心理学中心的使命是推广研究，培训，教育和传播积极心理学，2005年一月，我加入积极心理学中心，任教育主任和高级学者。2005年二月，Debbie Swick加入中心任教育助理主任。我们的任务是编制硕士课程，并在秋季推出。我一月加入，Debbie二月加入，三月完成论出，印刷并出版，申请的最后期限是四月。我猜有点乐天派，我们不知道是否有人报读，不知是否有人感兴趣，但我们不需要担心，我们收到超过一百份申请表。秋天时收了36名学生，后来的收生情况越来越好，这是我们当前的学生。
+
+2007年秋天，开课第一天，今年一共收录41名学生。我想多介绍一点学生情况，我们有三名毕业生或在读生，是这门课的助教，让人兴奋。Debbie Coen和Elizabeth Johnston，请站起来。还有Elizabeth Peterson。很好，看左上角。两年前，Gabriel修读这门课，在我们来推广硕士课程时。现在他正在我校读硕，这门课和我们的硕士课程，有很多合作。我们的学生年纪从22岁到62岁，来自美国各地，佛蒙特、弗罗里达、加州，来自世界各地。我们的学生来自英国、挪威、瑞士、印度、马来西亚、日本、香港、南韩和新西兰。25%到30%的学生是年青人，刚刚大学毕业、希望在进行职业训练之前，先深入学习积极心理学，其余学生是专业人士，来自各行各业、在第一班里，学生中有来自苏格兰的，全国前社工总监。
+
+那很有趣，肾移植医生，摩根大通的前副主席、律师，非牟利发展计划的主任。学校的常务董事，Carlbrook Academy今年选择了我们的课。人力资源主管、咨询师、执行教练，甚至音乐家和喜剧演员。班里的学生可谓五花八门。
+
+我想用两分钟，简单介绍一下教学设计，再简介一下课程内容。本课程是一年制全日制学习，九月开始，八月毕业。我们的教育设计是混合模式。每个月，学生有一次现场教学，其余时间，学生通过远程学习模式完成。这是一个职业硕士学位，教学重点放在积极心理学理论，及在各行各业的应用。目前来说，积极心理学，还没有独立的执照或证书。学生来自教育、商业、法律、医疗等各个领域，都有自己的文凭。让学生每月来校一次，进行现场教学的设计，允许学生继续全职工作。我刚说过，课程是全日制的，你可能奇怪。“怎么可能一边工作一边全日上课”。请记住这是一个职业学位，高级管理人员教育模式，就是为那些，全职工作的人员设计的。同时上全制日课程，多数学生继续，他们从事的工作，继续全职工作同时又能上课，这种模式的另一个优势，是不需要学生居住在宾州附近。学生从全国各地赶来，即让我们惊讶且欣喜的是，远在欧洲和亚洲的学生，也决定赶来。我不知道现在你们如何来上课，但我们的一些学生，每月从南韩和新西兰赶来，参加积极心理学课程。可以想象，为课堂带去的兴奋和活力，也给教授施加了压力。我们要确保，能传授值得绕半个地球赶来学习的知识。
+
+学生的多样性，提升了教学体验，居住在海外的学生，赶来上课。我们还聘请多位教授，不局限于宾州大学，还有其他大学。我们请来最杰出的研究员和积极心理学的从业者。简单概述2008年秋的现场教学，春季有五个，现场教学周未，其余时间是远程教学。简介一下课程，每位学生秋季上四门课，春季上四门课，然后是总结性课程。秋季时，课程集中介绍积极心理学的基础理论，Martin Seligman教。积极心理学课程概述，Angela Duckworth教研究手段与评估。让学生，真正把握积极心理学科学很重要，理解结论背后的研究手段。我教积极心理学原理。第四门课是“通向美好人生的方法”。请来多位杰出的研究人员，讨论他们的研究。春季，我们的课程，不再以理论为焦点，而是转向积极心理学的应用。因为这是应用积极心理学硕士学位。不知道你们是否学习了“特长与美德”，Chris Peterson的“价值和行为分类”。如果还没有学习，我肯定不久会学到，他也会教授有关自己研究的课程。我教积极干预应用，课程也包括一个服务教育部分。Karen Reivich和Judith Saltzberg Levick教积极心理学和个体。即在与他人的人际关系上，如何应用积极心理学，不论是在工作中，还是与朋友家人在一起时。
+
+最后一门课，不知你们是否熟悉“肯定式探询”。如果不知道，我想Tal会在本学期向大家介绍。David Cooperrider是这个领域的先驱，将积极心理学方法，带入组织，并致力寻求改变，不只是个人，而是整体水平的改变。最后要修的一门课是总结性课程，开课时间是夏季。这是一个独立课程，允许学生结合，课堂所学，进一步，应用于他们各自的职业。我们让学生进行研究，量化研究和质化研究。我们让学生，就感兴趣的领域写文献观后感，他们计划写的书的进展计划，或实验计划等等。以上只是课程简介，Debbie会占用几分钟时间，给大家看一些照片。过去几分钟展示了太多文字，Debbie会展示一些照片，更详细地介绍一下学生。交给Debbie，谢谢。
+
+大家听过了James的课程简介，我会介绍一下课程安排和内容。这是一张开学周的照片，开学周时，同学初次见面，他们来宾州五天，我们的课程从早上八点到下午五点。我知道听上去很疯狂，但我们相处得很快乐。你们看得出，学生们兴趣浓厚，因为我们收录来自全球各行各业的学生，在这个世界级学院，他们有机会进行真正的交流。班上有41个学生，一起上课，更像是论坛而非讲座。同学们有深入交流，休息时，午餐时，他们结识，来自世界各地的同学。宾州应用心理学硕士课程的另一种交流形式是团体交流。每个人和另外三五个人组织一个团队，你和他们合作不同的课题，远程学习可以做很多事，可以经常和这些人交流，这是你获得的另一种深度。当你与来自，世界各地的人合作时，我们很想利用总结性课程，作为踏脚石，让学生，更顺利地展开应用，很多人借助它，创建工作室。
+
+有一位学生把积极心理学初级课本，翻译成日语，她的译作得以出版，那个计划让她获益良多。还有学生，在学术刊物上发表了总结性课程论文，被邀请进行讲座，这是一位学生，在积极心理学峰会上作讲座的照片。我们录取学生进修硕士课程，他们可以做各种各样的事。我们给他们打下坚实基础，帮助他们加以应用。申请者打来电话时，询问得最多的问题是，“这个学位有什么用？”。我会告诉大家，这张快照上，Sasha Lewis Heinz，照片中的第一个人，目前她正攻读博士课程，在哥伦比亚大学进修发展心理学。读博前，她攻读了宾州应用心理学硕士课程，打下坚实的基础。那是她想应用和致力研究的，当她继续攻读博士时，上面第二名学生是Saniel Mimen。她在投资公司工作并利用业余时间，她挤出时间，创建了积极心理学每日新闻网站。内容囊括宾州硕士同学会撰写的，有关积极心理学的研究和应用文章。他们真的在进行研究和应用，另外，她还和其他多名硕士同学合力，参与到培训中来，参与我们，积极心理学中心的项目，中心有各种项目，去英国培训他人，向学校推广积极心理学。我们派去参与项目的是硕士生，因为他们有所需的教育背景和基础，去完成这些项目，
+
+我们希望继续安排同学参与，各种机会。
+
+Caroline Miller，照片中的第三个人，她是一位作家，正准备出版她的第二本书，她也是一个演说家和教练，攻读硕士学位后，她获得很多授课的机会。她的方向是目标设立和运动心理学。硕士课程大大扩展了她的能力，并非所有学生都是哈佛毕业生，但这三位都是哈佛毕业生，这张快照颇有趣味，我们希望有更多哈佛毕业生参加我们的课程。James，你来总结吧。
+
+非常感谢，Debbie。我们的推广名为“从教室走向世界”，宾州应用心理学硕士课程显然是一个途径，将积极心理学带向世界。再简单介绍另一个机会，我们刚刚创办国际积极心理学协会，它将成为一个重要国际组织，帮助积极心理学的研究人员和应用者，更便利的交流与合作。这是照片，在十月举行，照片上没有的是Tal，他是董事会成员之一，也是美国乃至全世界，众多杰出积极心理学家之一。协会设立特别的学生会员，我鼓励你们了解一下，国际积极心理学协会，网址是[www.ippanetwork.org](http://www.ippanetwork.org/)。加入并把握积极心理学领域，最新发展动态，很希望有时间回答你们的问题。但Tal准备了很多精彩内容，请继续上课。希望大家知道，今天下午有一个咨询会，在哈佛大厅103教室，从三点到四点半，我们非常期待，有兴趣的同学过来和我们谈谈，到时我们可以更详尽地，解答你们的问题。下课后，我们也会留下几分钟，我们带来宣传册，欢迎有兴趣的同学来取，在我们的网站上，可以了解到更多信息，pennpositivepsych.org。也可向列出的地址发邮件，希望我们能在宾州应用心理学硕士课程上见面。同时，祝你们本学期取得成功，深入学习积极心理学的科学，并将之应用于生活，思考如何把积极心理学，从教室带向世界。
+
+好的，成为宾州应用心理学硕士班的一员是种特权，因为在那里共度一年的，是来自各个领域的杰出人物，我们将会谈到的很多人，比如Bob Fredrickson，过一会我们会谈到他，或者以后会谈到的David Cooper，当然还有Martin Seligman，都会去那里给大家讲座，你将和他们亲密相处，真是一种特权，今天我想结束有关基础前提的讨论，讨论最后一个前提。还要再看这个吗？不，这个也不用看了，可以了。
+
+最后也是第五个前提很重要，是一个哲学前提。但我想在课程开始时介绍，你们好理解我讲课的起源，这门课程的来源，因为很多人说，好的，快乐是重要的，我们寻找它，我们有宣言，国家宣言，关于快乐对我们多么重要的个人宣言，但那不代表它是重要的。问题在于这个“是”，它是重要的但不代表我们应该去做。我认为它不仅重要，而且也应该是重要，首先要阐述这个“是”。快乐，不论我们喜欢与否，不论它是有意识地，还是潜意识地，不论它是明显的还是隐晦的，对多数人来说，不是全部但对多数人来说，快乐是最高追求，我们有宪法保证我们追求快乐。我们投入大量努力，大量时间思考自己和他人的快乐。二千多年前的亚里斯多德，“快乐是人生的意义和目的，人类存在的最终目标”。1890年在“宗教经验之种种”中写道，如果要问，人类生命最主要的担心是什么?我们应该得到的一个答案是，“是快乐”。如何获得，如何保持，如何重获快乐，是多数人时刻怀有的秘密动机，是他们愿意忍受一切的目的。你们可能听说过William James，这里有幢大楼以他命名。他在二百多年前谈到快乐，亚里斯多德在二千多年前也谈过，而且不只是西方人。吹喇叭那个，“不论一个人是否相信宗教，不论一个人相信这种还是那种宗教，我们生命的最终目标是快乐，我们生命的主要活动是寻找快乐”。
+
+快乐是重要的，不论是有意识的，还是潜意识的，明显的还是隐晦的。问题是它确实重要，但快乐应该是重要的吗？快乐的道德维度呢？还有很多事情在发生，世上有很多重要的事情要做，为什么把快乐作为最终目标，作为主要担心，为什么由它来决定生命活动？换言之，幸福有什么好处？积极情绪有什么好处？大量研究都尝试回答这个问题。暂不说研究，感觉好就是感觉好，想到快乐，注入内心，这是亚里斯多德的“同一律”。一即一，感觉好就是感觉好，这本身就是辩解理由，如果能感觉好，为什么不感觉好呢?证明，快乐为什么是不重要的重担可能落在，执否定观点的人身上，我们会在以后谈到这个论点。但首先的关键问题是快乐本身是好的，几乎无需辩解。然而除了感觉好，快乐还对我们的人生有帮助，对人际关系有帮助，对他人有帮助。Barbara Fredrickson做了这项研究，在宾州大学任教的学会成员，你们曾在上面见过她的照片。Barbara Fredrickson的观点是，积极情绪有一个进化理由，它们的目的不仅仅是让人感觉好。比如它们有助我们超越，现在的思考范畴，拓展我们的思想，有助我们建立人际关系，帮助我们建立能力。这门课的一个主要概念，就是积极情绪，积极心理学，就是要建立能力。我们使用的两个类比，是加强我们的免役系统或加强“心理引擎”，获得更强大的忍受能力，不只是从负到零，还要从零到正，这是Barbara Fredrickson的观点。
+
+我想进一步引用她的文章，也是你们这周要阅读的。“我们应该努力培育积极情绪，在自己身上和周围人身上，不能只将它们作为终极状态，还要将其作为手段实现心理成长，改善心理和身体的健康，我称其为积极情绪的扩建理论。因为积极情绪似乎能扩展人们的瞬间想法和动作指令库并建立持久的个人资源。通过体验积极情绪，人们实现改变，变得更有创造力，更博学，适应性更强，更易融入社会，获得更健康的人格”。体验积极情绪有诸多好处，是双赢的。它让人感觉好，对我们有好处，对整个社会也有好处，一会我就会解释，她谈到的问题包括，积极情绪有助我们克服消极情绪。体验消极情绪时，我们的意识，我们的思维变得狭窄，收紧，只专注于一件事。
+
+比如，那可能是件好事，一头狮子朝我冲过来，我不想考虑宾州大学硕士申请的事，不想考虑室友说了什么，我只想考虑这头狮子。我的意识变得狭窄，收紧，进入“对抗或逃跑”模式，有狮子朝我冲来时是件好事，但它变得不是很好。如果我的意识继续狭窄，收紧超出威胁，超出困难，我们知道经常会进入下行螺旋，一个恶性循环。当我们进入狭窄收紧的模式，随便举个例子，女朋友离开了我，我的思维收窄缩紧，一心只想着被女友甩了。结果就是，我感觉悲伤，因为我一心只想那个，悲伤，是一种痛苦的情绪，一种消极情绪，导致进一步的收窄缩紧，那有可能，并非总是，但可能一直持续下去，直到变成抑郁，那时我将很难脱离这种下行，恶性的循环。积极情绪正相反，它们扩展建立，扩建导致积极情绪，积极情绪再进一步扩建，所以是个良性循环，我眼界宽了，关注其他人，关注其他事，思考现在我能做什么?我能去哪里?我把时间用在哪里?很经常的是，积极情绪把我们带出下行螺旋，形成一个上行螺旋。积极情绪可以是看一部滑稽电影，可以是“一次深呼吸”，探讨“心理，身体”时会谈到深呼吸。积极情绪可以是与朋友交流，一次愉快的交流，积极情绪，能把我们带离这个下行螺旋进入这个上行螺旋，而且不用很久。
+
+困难在于将之与准许为人相结合，去体会情绪，实现转移，但不会进入下行螺旋。在发生小小意外六个月后，仍心情低落，我们会谈到什么是合适的时候，如何找到合适的时候，以及如何在思考痛苦情绪和让痛苦情绪滑入沉思到平衡，沉思并非总有帮助。它有助克服消极情绪，还有创造力，我们的眼界更宽，能产生更多联系，看到以前没有看到的联系。有很多关于“抑郁创造者”的说法，如果你想拥有更高水平的创造力，必须承受抑郁。其实并非如此，躁狂抑郁病人一般更有创造力，但一般在躁狂阶段，在抑郁阶段，我们的思维收窄，我们失去创造力，当然有例外，但总体而言没有。
+
+实际上有这样一项研究。在内科医生，医生中间进行，向他们提出一个与肝脏问题有关的很困难的问题，那是一个病人的病症，医生们被随机分成三组。第一组是对照组，他们必须解决这个问题。第二组听一段有关，医学人文观的声明，为什么作医生如此重要。第三组得到糖果，让他们获得愉快放松的好心情，第三组得到糖果，并获得积极愉快的心情。明显比另外两组有更好表现，他们考虑更多选择，得出更好的问题解决办法，这是这个领域中的一项研究。再举个例子，小孩子，一群小孩组成对照组。有人教第二组小孩回想，让他们大笑或微笑的经历。第二组，在学习任务上比对照组表现更好，因为他们被置于积极情绪，它是双赢的，它在很多方面定义了“不劳无获”。不论是对医生的教育还是在学校，在一般的工作场所也一样。因为动力和精力，不需要研究就能明白。你知道感觉好时，动力和精力更充沛。
+
+当然有很多研究支持这一点，最终达到成功，他们调查专业人士，能更好地控制自己的情绪，获得积极情绪，脱离狭窄收紧进入扩建的人，长远会取得更大成功，他们不是没有痛苦情绪，没有的都是死人，那些人经历痛苦情绪，但同时能够更好地，把自己，他们的意识，思想，他们的感受向积极方向转移。越快乐的人越成功，因为他们有更多精力，工作更努力，因为他们在追求，而不是在逃离，这叫“靠近而非逃避目标”。我们将在探讨“目标”时谈到，还因为他们建立更好的人际关系，他们更开放更宽容，他们的创造力更强，所有这些因素最终导致更高层次的成功，积极情绪不仅有助成功，不仅能让我们感觉好，还有助我们获得幸福。乐观的人，不是指盲目的乐天派，而是脚踏实地的乐观主义者，平均而言，明显更加长寿，保佑你们，免疫系统更强，所以对身体健康也有帮助。现在的问题是，道德问题，那么其他人呢?我谈论经营自己的生活，追求自己的快乐，这怎么不是自私?答案是“是的，那是自私”。当我对自己说，“我想更快乐”，我对自己说“我想更快乐”，那是一件自私的事。它是坏的吗?是不道德的吗?在我们的文化中，自私和不道德成了同义词，那是个问题，这就是为什么，因为这是头号，将自私等同于不道德是头号原因。多数是在潜意识里，导致不快乐的头号原因，人们为追求自己的快乐感到内疚，人们在自我感觉很好时会内疚。我怎么可以?我怎么敢自我感觉良好?我怎么能追求自己的快乐，当世上有那么多痛苦时?世上确有很多痛苦，我们要如何回应?
+
+首先，快乐是正和游戏，不是零和游戏，也不是负和游戏。我的快乐不是从别人那里夺来，那将是负和游戏，我有更多，你一定更少，甚至不是一个零···或者我更少。你也会更少，那也是负和游戏，或零和游戏，我更多，你就会更少，饼就那么大。不是这样的，它是一个正和游戏，为什么?因为快乐是感染的，如果我更快乐，我更有可能，对他人的快乐和幸福作出贡献，感受快乐。换言之，也是一种道德状态，对他人的幸福作出贡献，佛在几千年前就谈到它，“一支蜡烛可以点燃千支蜡烛，蜡烛的生命不会被缩短，分享绝不会减少快乐”。就像传递光明，你快乐并努力争取快乐，就是间直接对他人的快乐作出贡献。就像上次大笑的婴儿，把你们逗笑，笑是感染的。一般来说，努力争取快乐的人，再一次，不是那些总是保持快乐的人，那种人将很难建立人际关系，因为他们是死的。一般来说，活着的人，努力争取快乐，体验生活的变迁，起起落落。但努力争取快乐而且越来越快乐，有更好的人际关系，更宽容，更接受他人，更容忍他人和他们自己。
+
+很多研究表明自我帮助，换言之，努力为自己争取快乐，有助我们获得幸福，也能引导我们对他人更加宽容和亲切。一位重要的研究者，积极情绪领域的首批研究者之一，Alice Isen进行了这个研究。她反复证明，感觉好如何对我们和他人都有益，反之亦然。这是快乐很美妙的地方，别人快乐你也快乐，因为帮助他人也是帮助自己。记得你们这周的任务，一些同学已经知道，就是去做超越以往所做的事情。一天内多做五件好事，多做五件好事，这是Sonja Lyubomirsky做过的一项研究。我在第一堂课提及她的书《快乐之道》。她很好地证明人们不论是在一周内多做五件好事，可以更多，不必局限于五件，或者人们在一天内多做五件好事，都能让他们更幸福。帮助他人也是帮助自己。我说到的一件事，只说了一半意思，即最自私的所为就是善举，只说了一半意思。因为两者有内在联系，两者间有自我实施的循环。帮助他人就是帮助自己，帮助自己继而帮助他人，不要把它看作自私，有人可能会这样简单考虑，不该把自私等同于不道德。我们应该把它视为，人性的美妙之处，是我们应该颂扬的本性，我们的快乐与他人的相关连，我们通过同情网络和他人相关连。那是人性的美妙之处，一样值得我们进一步颂扬的东西。
+
+如果不颂场，如果我们不欣赏人性的那一部分，人性的那一部分将贬值，欣赏有两个意思，一是懂得感谢，二是传递。如果我们欣赏人性中，欲望中好的东西，如果我们欣赏本性中那一部分，它将升值，我们将获得更多。如果我鄙视它并说，“很可怕，我从帮助他人身上获得利益”，那么本性中那一部分将随时间贬值。你们正在读我书中的冥想部分，书中有更详细的阐述，也给出了哲学基础。因为在很多方面有别于“数数和思考”，那种方法在20和21世纪处于统治地位。思考道德，感谢好就是感觉好，也能让他人感觉好。
+
+我想以介绍一位，一生致力于，传播快乐的人来结论这个前提。圣雄甘地，这是关于他的一个故事，一个女人像很多人一样，来寻求甘地的建议。她长途赶来，还带着儿子，她拜见甘地，在他面前说，她对他说，“我长途赶来，因为我儿子有个问题，我儿子吃太多糖，希望你能告诉他别吃太多糖，因为糖损害他的健康，牙齿，他会听你的，他很崇拜你”。甘地看着她说，“夫人，你能一个月后再来吗？”。她不明白为什么但还是听了他的话，因为他是甘地。她离开，长途返回，一个月后又回来，再次与甘地见面，她在他面前说，她说“一个月前我来过”。他说“是的，我记得”。她说“你能告诉我儿子，不要吃太多糖吗？”于是甘地注视着那个孩子说，“孩子，不要再吃太多糖”。就是这样，那个女人很困惑，她鼓起勇气，说“圣雄，非常感谢，我肯定他不会再吃太多糖，但为什么不在一个月前告诉他，在我长途赶来的时候？”他说“夫人，因为一个月前，我也吃太多糖”。是的，我知道这是个很深奥的笑话，需要时间，很高兴你们消化了。甘地说过一件事，出自他的精彩自传，《我的对于真理的实践经历》。“成为你想在世上见到的改变”，只有这样才能实现改变。
+
+我想和大家作个小练习，特别对男生来说是个困难练习。但请忍耐，感觉不舒服的，就不要做，希望按下面的指示做，让你的姆指和中指，尽可能形成一个直角。可能有点痛，尽可能形成一个直角，看着我，就像这样，直角。再让这两个手指，中指和姆指，尽可能保持直角时围成一个圆圈，男性比女性更难做到，男性的柔韧度更小。围成一个圆圈，看上去像只兔子，如果能投影的话。中指和姆指，好，看着我，像这样，尽可能围成一个圆圈，不是完美的圆但要尽力，把这个围起来的圆圈，看到吗?这是个圆圈，把这个圆圈放在面颊上，另一个地方，可能需要一会。我看到的多数同学都放在了下巴上，我很清楚地说是“面颊”，问题就在这里，多数人都是照你做的做而不是照你说的做。请记住这一点，我不认为课堂上有任何人，会告诉我，“我的人生目标是让别人不幸，我真得想那么做，我想要世上所有人都不幸”，这里不会有人真得说出那种话。希望如此，我们在座的多数人，不论做什么，从现在到未来，都是理想主义者，我们想为世人造福，想传播快乐。但记住，人们照你做的做，不是照你说得做，你也许想传播快乐，通过你的言话，但最好的方法，传播快乐的最佳方法是努力争取自己的快乐，因为那时你就成为榜样。
+
+这也适用于领导，领导最重要的不是说的话，而是如何以身作则，为人父母最重要的，不是告诉子女“诚实很重要”，而是你自身有多诚实。如果你想传播快乐，“成为你想在世上见到的改变”，以身作则。这就是五个基本前提，它们构成这门课的基础。我们将在未来两个月，扩展这些前提，最重要的是如何将研究，原则运用于生活。
+
+现在开始下一课，“信念即自我实现预言”。我必须承认，这个话题点燃了我的想象。当我是孩子时想到它，当我还是一名运动员时，那时我明白了信念的力量，后来它挑起我对心理学的兴趣。我想从一个特别的故事开始，在很多方面，它是我听到过的，第一个有关心理学的故事，那个故事让我明白，心理学对幸福和成功是多么重要。
+
+成功对14岁的壁球手来说，是我生命中最重要的东西，故事讲的是Roger Bannister，举下手，多少人听说过他?好的，只有少数，听过的可以重温一次。Roger Bannister是个跑手，跑一英里。直到1954年，在四分钟以内跑完一英里，被认为是不可能的，事实上医生证明四分钟跑一英里，是人类能力的极限。生理学家进行实验，在科学上展示证明人类能力极限，是四分钟跑一英里，不可能少于四分钟。跑手们证明了医生和科学家···证明了他们是对的，一英里跑四分钟两秒，四分钟一秒，但没有跑手能少于四分钟。从一英里跑计时以来，当人们开始计时跑时，那是不可能的。医生和科学家证明了跑手，运动员，世上顶尖选手证明了医生们是对的。然后Roger Bannister出现，他说“四分钟内跑完是可能的，我要做给你们看”。说这话时，他是牛津大学的医学博士，也是一名出色的跑手，顶级跑手，但时间远高于四分钟，他的最好时间是四分12秒，自然没有人把他当真。但Roger，Bannister坚持苦练，不比别的跑手练得更苦，但和世上别的跑手一样苦练，而且有进步，他突破了四分十秒，四分五秒，跑到四分两秒时停止，像所有人一样，无法低于四分二秒。他不是世上最好的跑手，但也是佼佼者，但他还是说“有可能，在这件事上人类没有极限，我们能在四分钟之内跑完一英里”。他坚持这么做，坚持练习，却一直失败。直到1954年，1954年五月六日，在重回故校时，Roger Bannister用了三分59秒跑完一英里，轰动一时，登上全世界的头版头条。“科学遭到挑战”“医生遭到挑战”，“不可能成为可能”，它成为梦想一英里。现在听这个，数十年来，自从开始一英里跑计时以来，没有人突破四分钟界限，那被认为是不可能的，但在五月六日，Roger Bannister特做到了。六周后，澳大利亚跑手John Landy，一英里跑了三分57.9秒。第二年，1955年，37名跑手在四分钟内跑完一英里。1956年，超过三百名跑手突破四分钟界限。
+
+这是怎么回事?运动员们更加努力训练?当然不是，是有了新的技术，新的鞋子?不是，是信念，信念是多么强大，不是因为跑到那个时间，就说“不好，超过速度极限了，放慢速度吧”。根本不是那样，他们尽了最大努力，最大可能，然而他们的潜意识限制了他们，阻止他们突破界限。那不是医生，生理学家和科学家们声称的身体界限，而是心理界限，Roger Bannister攻破了那个要塞，意志和心理上的要塞。信念即自我实现预言，它们经常决定我们的表现，我们表现的多好或多糟，经常决定我们的人际关系有多好或不那么好。它们是人生成功和幸福的头号预言，我们将会谈到，今天和下节课我们要谈的是，信念如何形成现实，它如何发挥作用?信念力量背后的机制和科学是什么?因为在很多方面，这听上去像神秘主义，一部分是很神秘，仍无法理解，但我们会谈到我们所知的。信念为什么会起作用及如何起作用。可惜，人们对乐观主义有很多误解，因为自助运动在很多方面，是在告诉我们信念力量是怎么回事。提到《思考致富》那本书，我们会讨论各种秘密，它们如何通过思想创造现实，其中有些是事实，但仅是部分。我们将连通象牙塔和主街，说明那个信仰背后的科学和危险，最重要的是如何应用?如何加强我们的信念，如果真有这么紧密的关联，如果希望，乐观主义和信念真的，有着非常紧密的关联和预测力，如果它们决定我们的产出，无论在体育场上，还是在工作地点，在人际关系上，如果它如此重要，那么该如何加强信念？
+
+我们会谈到Bandura对自我效能的研究，谈到Nathaniel Branden对自负的研究，如何才能将梦想变成现实，可以是政治梦想。我们将谈到马丁路德金的“梦想法”，他是如何做到，做了什么。也可以是个人梦想，我们会谈到Herbert Benson和Bandura，再一次引用佛的话，“境随心转，全由意念升起，我们的念头造就了世界”。这是几千年前的一个主张，现在我要做的，是专注于这个主张的科学基础。
+
+我会从Pygmalion开始讲起，“Pygmalion”是古希腊语。Pygmalion是个雕刻家，成年后他开始寻找理想中的女人，他想结婚，他在雅典城里寻找，找遍整个希腊，找遍整个希腊帝国，去希腊帝国以外寻找，寻找他理想中的女人，一个能和他结婚的女人，但没有找到，不论去哪里找，这是可以理解的。那是1879年之前，雷德克利夫学院还没成立，远在哈佛成为男女合校之前，他找不到理想中的女人，于是他返回雅典。他对自己说，“我不再寻找理想中的女人，我要雕刻一座雕像”。因为他是雕刻家，“我会以她的形像雕刻一座雕像”，他雕刻出那座雕像。当他看着她时，他被激动之情和悲伤淹没，因为他找不到她，于是他开始哭泣。宙斯，雅典娜，特别是阿芙罗狄蒂，俯视他，深感同情。于是把雕像变活，当然他们幸福地生活下去，这是这个词的由来。然后萧伯纳借助这个词，创作了一部情节类似的戏剧，后来被改编成音乐剧《窈窕淑女》。说的是Higgins，一位博士，语言学家，如何把一个卖花女塑造成贵族，当然故事讲完时，是她塑造了他，改变了他，非常精彩的故事。当时很重要的故事，因为它挑战了整个阶级体系。人生来就有阶级，不能，也不应该被改变，在当时是很重要的戏剧。今天也是如此，Pygmalion和人是可以被改变，被改造的。
+
+1960年代，Robert Rosenthal曾在本系担任多年主任，现在就职加州大学河滨分校。把Pygmalion的思想应用于课堂，他是这么做的。Rosenthal随便走进几间学校，去到学生中间，让他们接受一次测验，然后去找他们的老师并告诉他们，“你们的学生刚接受了一个新测试，一种新的学业测试，叫作快速迸发者测试”，测试能让我们找出，将在新学年在学业上，取得巨大进步的学生。在新学年取得巨大进步，换言之，他的意思是，测试找出最有潜力的学生，他发现····，他对这些老师说的是，“这只是仅供参考，不能向学生透露，我们不希望学校有歧视行为，只是让你们知道，这些学生有巨大潜力，这是一项新发明的测试，只有你们知道就好”。老师们不知道的是，对学生进行的测试，只是普通的现成的智商测试，老师们也不知道这些所谓的，“快速迸发者”或者潜力巨大的学生，都是从一个帽子抓阄抓出来的。他们都是普通学生，和别的学生没有区别。但老师们以为他们有巨大潜力，Robert Rosenthal离开学校，学年结束时再回来，他发现，他查看他们的英语成绩，“快速迸发”学生有明显进步，比任何学生的进步都快。他查看他们的数学成绩，因为英语不够客观，也许是老师们，觉得某些学生英语更好，于是他查看他们的数学，客观的成绩。这些学生也有明显进步，比其他任何学生的进步都大。接下来才是有决定性的结果，Robert Rosenthal又对所有学生，进行了一次智商测试，他发现被标签为，被随机地标签为“快速迸发”的学生，智商在一年间有很大增加，而且在长期研究中保持着增加。
+
+这让人不解，智商，本来是生而有之的，它是恒定的，从出生到死亡时都不会改变，或者说他们这样认为，但它却因为，老师对学生的信念而改变，信念即自我实现预言，这项研究说明了什么？老师们被骗了吗？突然产生幻象?不是的，是因为他们之前被欺骗，幻象是他们看不到，就在他们眼前的东西，即每个学生都有潜力。Robert Rosenthal来到，可以说是骗了他们，“骗”他们注意到一直在眼前的东西，在那之前，他们没注意到车上的孩子，可以这么说，之后，突然他们在一些孩子身上，看到一直都有的潜力，他们欣赏那种潜力，潜力得到升值，他们灌溉，播撒阳光，种子开始发芽生长，这正是Marva，Collins每天在学校里做的事。她看到存在的潜力，她不是发明家，没有脱离现实，是人们看不到他人身上的潜力，也看不到自己身上的潜力。我们会讨论到，他们没有看到整个现实，只看到一部分，完全无视车上的孩子们。我们知道无视一部分现实是多么容易，就算他们就在我们眼前，经常需要被问及，问及我们之前忽略了什么，不论是对风险人口的研究，或者是人口结构，或者只是对我们的，人际关系和自己提出负面问题，或者没有看到。每个孩子身上都有的潜力，如果我们看到它，只要我们看到它、欣赏它、灌溉它、播撒阳光，它就会感恩，成长。Rosenthal做的只是将他们注意力，转移到一直在那里的东西上，在工作场所也是如此，几百几千次地重复着。
+
+Pygmalion效应，曾在一个工作场所里重演过。主管或经理被告知，这些是，极有潜力的员工，那些员工也是随机挑出的，但真的变成最有潜力的员工，并取得更大成功。他们的保持力增加，工作表现出色，在公司更有可能被升职，并留在公司里，这都只是期望产生的结果，角色调换后结结果一样。
+
+Jamison在1997年做了一项很有趣的研究，她想知道角色调换后是否有相同结果，她去到由同一名老师负责的两个班。开始上课之前，只告诉一个班，这位老师受到从前学生的极大好评，他们作为心理学家，给这名老师极高的评价，然后他们离开两个班。学年结束时，情况如何？首先，干预组给这名老师的评价，高于对照组，而且学生对课业，付出更多时间，成绩比对照组好，因为他们相信，他们被欺骗相信，这位老师的水平比实际情况高。换言之，学生看到老师身上的潜力，学生们表现得···与老师无关，老师没有更好的表现，但学生表现得更好了。当他们有更高的期望时，当他们相信自己的老师时。如果各位想学好1504这门课，你们知道该怎么做了，是吗？
+
+真的管用，信念即自我完成预言，我们创造我们的现实。歌德说过，“人是怎样便怎样待他，他便还是那样的人。一个人能够或应该怎样便怎样待他，他便会成为能够怎样或是应当怎样的人”。现在我想谈一个相关话题，它对心理学家很重要，对生活应用也很重要，那就是我们创造的情境，或为我们创造的情境的重要性。在很多方面，心理学家，肯定地说是社会心理学家，都会被在情境之下完成的，一系列研究所影响，但多数是消极的情境。修读或没修读过初级心理学的，可能都听说过“阿施从众心理实验”，个体对群体存在从众现象。很多同学可能听说过，Milgram的“权力服从”，如果没听说过，我不会在这里深入介绍，阅读了解一下，去网上找一下，两者都是心理学领域。最精彩的研究，在街上随便找个人，在实验者的指示去电击另一个人，甚至电击到另一个人尖叫恳求停止。因为实验者说实验必须进行下去，而且实验者经常穿着一件白大褂，就像医生或者实验者。因为他们说实验必须进行下去，经常的，人们会，多数人，美国人都会继续电击那个人，甚至电击到另一个人哭泣，恳求放他出去。仅仅是因为那一句，“实验必须进行下去”。情境的力量，对权力的服从。这项研究的目的是为了证明，为什么大屠杀只发生在德国，那里的人更容易服从权力。他们发现全世界的人，都倾向服从权力，不论是在美国还是德国，全世界都是如何，如出一辙。
+
+情境的力量，Philip Zimbardo的监狱实验。在斯坦福进行，他们做的是，没读过的找来读，我不会深入介绍。他们从街上随便找来一些人，分别扮演典狱长，狱警和犯人，这项实验预计进行两周，证明进入角色的效果，一周后，他们发现，实验必须终止，因为随意找来的，随机分配的典狱长们，变得非常残暴，他们侮辱犯人。进入犯人角色的人受到侮辱，就像犯人经常感受到的侮辱。这解释了Abu Ghraib监狱丑闻，时事现象，伊拉克战俘的遭遇，随便一个人一旦进入角色，他们进入得太深。Zimbardo不得不在一周后终止实验，可以去视频网站上看到，这是很重要的。知道很好，知道很重要，但不够，因为情境如此强大，为什么只强调消极的东西？为什么不创造积极的环境，让我们获得更快乐更讲道德的生活?正像很多积极心理方法一样，被21比1的比率忽视。
+
+我要和大家分享这个领域的两项研究，两项研究都由本校的Ellen Langer完成，顺便说一句，我现在要讲到的这项研究，是即将推出的Langer教授记录片的主干。扮演Ellen Langer的演员，Langer是心理学系的第一位女性终身教授，扮演Ellen Langer的是詹妮弗安妮斯顿电影有望在一年后上映，但电影讲的是我要谈到的这项实验。实验在1979年进行，Langer的实验是，她找来75岁以上的男人，把他们送去一座别墅，那是间以1959为主题的别墅。虽然实验在1979年进行，音乐来自1959年，他们读的杂志都是1959年前后的，日报是1959年的，所有的一切都是1959年的，就算他们要进入角色和Zimbardo的实验一样，要扮演1959年时的角色，仿佛年轻了20岁。这是个心理学实验，在实验前后进行各种测量。他们发现，在别墅待了一周，在一周结束时，在一周结束时，心理和生理年纪都减小了。比如，他们在各项测试中变得更灵活，他们变得更强壮，他们手掌，双腿，身体都变得更强壮。他们的记忆力有明显改善，他们的智力水平，在实验前后进行测试，再与对照组相比，在仅仅一周后就有明显改进。她测量指骨间的距离，人越老，骨骼间空隙变得越小，指骨变得更紧，一周后，他们的手指变长，他们变得更快乐，变得更加自立，更少依懒他们，不论是他们自己，还是家庭成员的评估都是如此。他们变得更健康，他们的视力和听觉有明显改善，在短短一周时间内，就是因为他们进入了强大的积极的情境。与在外面世界遭遇的，典型情况和偏见不同，仅仅通过“扮演”某个角色，他们变成那个角色。正如Zimbardo的犯人，在短短一周内真得变成犯人。
+
+她的另一项研究，她在书中有叙述，《念》我强烈推荐这本书，她测量人们的视力，给他们一幅普通的视力表，测量他们的视力，记录结果。然后她把让同一群人，这次让他们穿上飞行服，同时让他们坐进飞行模拟器，然后给他们看完全相同的视力表，相同的距离，相同的视力表，唯一的不同是，他们坐在，飞行模拟器里，穿着飞行服，他们坐在那里看视力表，然后她又进行了一次视力测试。40%的参与者的视力有明显改善，仅仅是在改变情境的情况下，相同的距离，相同的表，什么都一样，只是情境不同，问题是我们如何创造积极情境，如何创造一个利用角色自我改进的情境。
+
+我想介绍两个研究，先说第一个再说第二个。关于环境，首先是Barge的研究，影射分为潜意识和有意识影射。比如你看着一个屏幕，在几毫秒内闪过一个词，这个词让你有了准备，有很多关于如何利用，典型消极情况进行影射的研究。比如，使用偏见，或者积极的，但对积极影射的研究不够，Barge做了下面的实验，他用与“老”有关的词影射人，比如“老”这个词，“拐杖”，“佛罗里达”，他用这个词影射人们，他用与老有关的词影射人们。然后他对比他们和对照组的，智力和记忆力测试结果，用与“老”相关的词影射过的人的记忆力，他们的表现比对照组差。第二，他观察这些人，记录他们从实验地点，走到电梯的时间，还找来盲测员，那些不了解情况的人，评估他们的走路，用“老”影射过的人行走起来，真得比其他人更弯腰驼背，走向电梯的速度明显慢。虽然不知道自己被与“老”相关的字影射过，但他们走向电梯的速度，比没有受到影响的人慢，完全是潜意识的，然后他们用与“成就”相关的词，影射人们，受到影射的人，用与“成就”有关的词进行潜意识影射的人。测试结果比对照组好，他们的记忆力得到改进，面对困难任务时更有持久力，问题是···下次课我会谈到的是，如何创造有意识的，和潜意识的积极环境。让我们带出最有道德，最成功的自我，并且去欣赏那个自我，帮助环境带出最出杰的自己，下堂课见！
 
