--- a/17.md
+++ b/17.md
@@ -2,7 +2,8 @@
 
 大家早上好！我们接着讲上节课没讲完的内容。开始讲之前，上节课后有同学来找我，问我有没有其他的运动选择，我上次讲的研究，希望大家也去看看，就是Callaghan等人写的那篇文章，里面侧重讲的是**有氧运动**，我之前也提过，做这运动的目的是缓和高强度运动，做这种运动，你会达到最大心率的70%，大约在最大心率的65%到75%之间，大家搜索心率运动，就马上得到想查的各种心率表。这是其中一种运动形式，有些同学问：“举重训练行不行，间歇训练行不行？”快跑，休息，再快跑，再休息，这是划艇队经常做的训练，运动员经常做的训练，这些运动行不行，我上节课没有专门提出，是因为目前对其他的运动还没有定论。我可以告诉大家，目前在研究中发现的一些趋势，目前看来，如果你只能做一种运动，那么最佳选择，时间最花得其所的是有氧运动，理想地每周三四次半小时的有氧运动，这是最低要求。但是，如果你还能做举重训练以补充有氧运动，那也很好，一周两三次举重训练非常好，尤其是年纪大了以后，但在年轻时，举重训练也很好，但是它不能代替有氧运动。
 
-        研究发现它改善心理健康的效果，不如有氧运动，另外一种运动，在经过研究后，我要重申，这些都是初步结果，有人对这种运动做过初步研究，最后结果，因为样本不足，暂时无法下确切结论，但我们可以确切地说**有氧运动产生的效果能媲美一些强效精神病药物**，这个结论是确切的，有大量研究来支持，包括Babyak 2000年以来的研究，以及以前的另一种开始被研究的运动，得出可喜的结果，那就是**间歇运动**。间歇运动就是，以跑步为例子，达到最大心率的90%到95%。如果你20岁，你最大心率就是200，计算公式就是220减去年龄，所以你跑步的心率要达到180到190，强度非常高，不能持续很长时间，但如果能持续到30秒到一分钟，然后休息，让你的心率下降到最大心率的60%，也就是120，然后重复这个间歇运动。有初步表明这种运动，能产生显著效果，通常效果甚至比单纯有氧运动更大，而且持续时间更长。所以，再说回来，我没有在课堂上正式介绍这种运动，但很多同学问起，所以现在介绍一下。因为我只想给大家介绍那些有确切结论的运动，John Ratey也谈过这种运动，我等一下会讲他。他是哈佛医学院的精神医生，可以说他是一个前沿的倡导者，在研究运动和精神健康这个领域。他本身……虽然目前的结果是初步的，但他一周会做两次间歇运动，除了一周做六天运动以外，其中两天还会做全速短跑，休息，全速短跑，休息，研究表明即使没有做够30分钟，但还能得到同等的效果，同等的甚至更好的心理效果。我一周也会做两次间歇运动，所以，我举两个例子，今天早上我在蹦床上跳了30分钟，在这30分钟里，我还做了4个短跑，没错，你们不相信我会跳蹦床，是吧？我下次拍下来，还是不要了。4次短跑，我戴着心率监测仪，快速跑一段，我的心率大约是165，165到170之间，然后休息，下降到110，少于我最大心率的60%，如此重复四次，这30分钟里其余的时间，我只做缓和的有氧运动，所以我也做间歇运动，举重训练就比较少做，因为我做瑜伽时，就有这种加强体能的效果。但最重要的一点是，我想说，间歇运动，特别是对于完美主义者来说，很容易导致训练过度，大家最好不要达到最大心率，并且持续一段时间，即使你做得来，更多并不意味着更好。再说一次，除非你是备战奥运，这种情况下有时你就要达到，100%的最高心率，想练出最健康的身体，达到90%......最大心率的95%就行了。所以戴上心率监测仪就很有用，因为它能告诉你，运动是否强度太大，或者强度不足。总之，换换花样有助于运动，你可以跳舞，这也是好运动，你可以偶尔去健身室健身，偶尔打篮球，划艇，花样越多越好，只要保证，至少**对我们来说，一周四次，一次30分钟的有氧运动。**
+    研究发现它改善心理健康的效果，不如有氧运动，另外一种运动，在经过研究后，我要重申，这些都是初步结果，有人对这种运动做过初步研究，最后结果，因为样本不足，暂时无法下确切结论，但我们可以确切地说\*\*有氧运动产生的效果能媲美一些强效精神病药物\*\*，这个结论是确切的，有大量研究来支持，包括Babyak 2000年以来的研究，以及以前的另一种开始被研究的运动，得出可喜的结果，那就是\*\*间歇运动\*\*。间歇运动就是，以跑步为例子，达到最大心率的90%到95%。如果你20岁，你最大心率就是200，计算公式就是220减去年龄，所以你跑步的心率要达到180到190，强度非常高，不能持续很长时间，但如果能持续到30秒到一分钟，然后休息，让你的心率下降到最大心率的60%，也就是120，然后重复这个间歇运动。有初步表明这种运动，能产生显著效果，通常效果甚至比单纯有氧运动更大，而且持续时间更长。所以，再说回来，我没有在课堂上正式介绍这种运动，但很多同学问起，所以现在介绍一下。因为我只想给大家介绍那些有确切结论的运动，John Ratey也谈过这种运动，我等一下会讲他。他是哈佛医学院的精神医生，可以说他是一个前沿的倡导者，在研究运动和精神健康这个领域。他本身……虽然目前的结果是初步的，但他一周会做两次间歇运动，除了一周做六天运动以外，其中两天还会做全速短跑，休息，全速短跑，休息，研究表明即使没有做够30分钟，但还能得到同等的效果，同等的甚至更好的心理效果。我一周也会做两次间歇运动，所以，我举两个例子，今天早上我在蹦床上跳了30分钟，在这30分钟里，我还做了4个短跑，没错，你们不相信我会跳蹦床，是吧？我下次拍下来，还是不要了。4次短跑，我戴着心率监测仪，快速跑一段，我的心率大约是165，165到170之间，然后休息，下降到110，少于我最大心率的60%，如此重复四次，这30分钟里其余的时间，我只做缓和的有氧运动，所以我也做间歇运动，举重训练就比较少做，因为我做瑜伽时，就有这种加强体能的效果。但最重要的一点是，我想说，间歇运动，特别是对于完美主义者来说，很容易导致训练过度，大家最好不要达到最大心率，并且持续一段时间，即使你做得来，更多并不意味着更好。再说一次，除非你是备战奥运，这种情况下有时你就要达到，100%的最高心率，想练出最健康的身体，达到90%......最大心率的95%就行了。所以戴上心率监测仪就很有用，因为它能告诉你，运动是否强度太大，或者强度不足。总之，换换花样有助于运动，你可以跳舞，这也是好运动，你可以偶尔去健身室健身，偶尔打篮球，划艇，花样越多越好，只要保证，至少\*\*对我们来说，一周四次，一次30分钟的有氧运动。\*\*
+
 
         上节课，我们讲到**克服障碍**，其中一些障碍包括，**伴随运动而来的疼痛**，使运动更难了，即使你只达到最大心率的70%，运动引起不适，克服不适的最简单方法是进入状态，因为通常我们跑步进入一种状态后，我们就感受不到不适了，但必须开了头才行，找别人来支持你克服困难，慢慢适应，用一些东西分散注意力，例如是电视，MP3，能分散注意力就行了。另一个障碍，很不幸，这个障碍在校园很普遍，那就是我们**没有时间**，大家知道，在高中，我经常去高中演讲，我注意到的其中一件事是，通常，很多高中要求学生参加团队活动，他们除了体育课做运动外，还要参加团队活动，所以他们运动得更多，虽然还是不够，但是我们读大学第一件放弃的事，尤其是那些不参加团队活动的学生，我们放弃的第一件事就是运动。
 
@@ -25,43 +26,45 @@
 
 这个研究的第二个问题是，两者之间只是关联，但没有因果关系，也许吹喇叭的天生就是这样，所以他才对冥想产生兴趣。也许Matthieu Ricard，他写了一本关于幸福的书，它是喇嘛的翻译，一个右撇子，也许他天生就是这样，左前额皮层比右前额皮层活跃得多，对了，它的比例完全超出钟形曲线。
 
-        **除了因果关系，还有一个主要问题，时间。**我们有耐心经常长时间冥想吗？我发现当我开始冥想、开始做瑜伽时，我真的能看到益处。我说，“我每天做半小时就能收到成效了。如果我进行一次长时间静修呢？”所以我想进行十天的静修，我跟Tammy说，“我想去静修十天”，Tammy很了解我，她说，“你不用要么不做，要么就做到足，不如你试试先静修一天，然后再进行为期十天的静修？”我说，“这是个好主意”。我开始为期一天的静修，离这里不远，就在剑桥。我踏上这段静修之行，非常激动，那天是星期六，我盼了一整周，我当时想通过这一天的静修，就踏上觉悟之路了，等我做完这一天的静修，等我向Tammy证明这对我有很大益处时，她就会看到我静修之后有多平静，她就会说，"好的，去静修十天吧！"所以我去静修一天。
+```
+    **除了因果关系，还有一个主要问题，时间。**我们有耐心经常长时间冥想吗？我发现当我开始冥想、开始做瑜伽时，我真的能看到益处。我说，“我每天做半小时就能收到成效了。如果我进行一次长时间静修呢？”所以我想进行十天的静修，我跟Tammy说，“我想去静修十天”，Tammy很了解我，她说，“你不用要么不做，要么就做到足，不如你试试先静修一天，然后再进行为期十天的静修？”我说，“这是个好主意”。我开始为期一天的静修，离这里不远，就在剑桥。我踏上这段静修之行，非常激动，那天是星期六，我盼了一整周，我当时想通过这一天的静修，就踏上觉悟之路了，等我做完这一天的静修，等我向Tammy证明这对我有很大益处时，她就会看到我静修之后有多平静，她就会说，"好的，去静修十天吧！"所以我去静修一天。
 
-        那一天的静修，我们进去看到一个男人，长着胡子，坐在一班学生面前，显得非常平静。我想“我静修完今天，我就能像他那样了，除了没他的胡子。”我们坐下，他说“我们先从静坐冥想开始。”我们都坐下，我们都有坐垫，我需要几个坐垫。我们坐在那里，我把手放在这里，他说“好了，深呼吸，从鼻孔吸进去，然后呼出来。”我们跟着做，我们坐在那里，我有多运症，我的思想开始涣散，他说“如果思想涣散了，集中回来”，我们做了。。。我觉得很长时间，我坚持住，我想“你思想涣散了，没关系，集中回来”，我继续坐在那里，我们坐了45分钟，最后他说“慢慢地轻轻地睁开眼睛，站起来”，他说“接下来，经过45分钟后，我们开始第二部分”，第一部分是静坐冥想，接下来我们要行走冥想。他解释了一下，然后我们围成一个圈，跟着他走。我们走得很慢，很认真，把注意力集中到每一步上，把腿抬起，他说“集中到动作上”，“专注于此时此刻，如果你思想涣散了”，我经常这样“再集中回行走上，继续深呼吸，就像刚才静坐冥想一样”。所以我们绕着房间，走了很久，继续走，绕着房间走。我的思想继续涣散，我感到无聊了，我开始四处看别人，他们都绕着圈子走着。然后我看了看老师坐的地方，老师旁边有一张纸，我想“真有趣，不知道上面写了什么呢？”所以我继续走，又走到那张纸那里。我想是“时间安排表，真有趣”。我不够时间看清上面写什么，我想“我就有盼头了”，我继续走，我看到我们刚上完的课，45分钟静坐冥想，后面是45分钟的行走冥想，接下来是什么呢？我继续走。我有盼头了，所以我很高兴，我往下看，45分钟静坐冥想？然后，45分钟行走冥想？又是静坐和行走。然后是午餐，午餐后面又是什么呢？45分钟静坐冥想？然后是行走。。。天啊，然后是行走冥想？于是我心里想，“太恐怖了，再见！天啊！”我走出去了，我受不了了，所以。。。我跑回家了。
+    那一天的静修，我们进去看到一个男人，长着胡子，坐在一班学生面前，显得非常平静。我想“我静修完今天，我就能像他那样了，除了没他的胡子。”我们坐下，他说“我们先从静坐冥想开始。”我们都坐下，我们都有坐垫，我需要几个坐垫。我们坐在那里，我把手放在这里，他说“好了，深呼吸，从鼻孔吸进去，然后呼出来。”我们跟着做，我们坐在那里，我有多运症，我的思想开始涣散，他说“如果思想涣散了，集中回来”，我们做了。。。我觉得很长时间，我坚持住，我想“你思想涣散了，没关系，集中回来”，我继续坐在那里，我们坐了45分钟，最后他说“慢慢地轻轻地睁开眼睛，站起来”，他说“接下来，经过45分钟后，我们开始第二部分”，第一部分是静坐冥想，接下来我们要行走冥想。他解释了一下，然后我们围成一个圈，跟着他走。我们走得很慢，很认真，把注意力集中到每一步上，把腿抬起，他说“集中到动作上”，“专注于此时此刻，如果你思想涣散了”，我经常这样“再集中回行走上，继续深呼吸，就像刚才静坐冥想一样”。所以我们绕着房间，走了很久，继续走，绕着房间走。我的思想继续涣散，我感到无聊了，我开始四处看别人，他们都绕着圈子走着。然后我看了看老师坐的地方，老师旁边有一张纸，我想“真有趣，不知道上面写了什么呢？”所以我继续走，又走到那张纸那里。我想是“时间安排表，真有趣”。我不够时间看清上面写什么，我想“我就有盼头了”，我继续走，我看到我们刚上完的课，45分钟静坐冥想，后面是45分钟的行走冥想，接下来是什么呢？我继续走。我有盼头了，所以我很高兴，我往下看，45分钟静坐冥想？然后，45分钟行走冥想？又是静坐和行走。然后是午餐，午餐后面又是什么呢？45分钟静坐冥想？然后是行走。。。天啊，然后是行走冥想？于是我心里想，“太恐怖了，再见！天啊！”我走出去了，我受不了了，所以。。。我跑回家了。
 
-        说实话我感到很尴尬，所以我想“不如我在外面逛一天，回家时装出一副觉悟的样子”，但我没有那么做，我打给Tammy。我告诉她“你想和我一起吃早餐吗？”我们一起吃了，她明白这是人之常情。我觉得自己无法静修十天，我觉得自己无法静修30年。我的问题是，在这种情况下，那些不想、或者无法长时间冥想的人，冥想怎么帮得了他们？别误会我的意思，我推荐大家进行静修，有些人去静修了以后变得不同了。我见过，我有很多朋友去过。再说回来，静修一天还是十天，有些人静修了长达三个月，他们都取得了很好的成果，但我坚持不下来。        
+    说实话我感到很尴尬，所以我想“不如我在外面逛一天，回家时装出一副觉悟的样子”，但我没有那么做，我打给Tammy。我告诉她“你想和我一起吃早餐吗？”我们一起吃了，她明白这是人之常情。我觉得自己无法静修十天，我觉得自己无法静修30年。我的问题是，在这种情况下，那些不想、或者无法长时间冥想的人，冥想怎么帮得了他们？别误会我的意思，我推荐大家进行静修，有些人去静修了以后变得不同了。我见过，我有很多朋友去过。再说回来，静修一天还是十天，有些人静修了长达三个月，他们都取得了很好的成果，但我坚持不下来。        
 
-        我们该怎么做呢？Jon Kabat—Zinn在他的研究中，告诉了我们冥想如何应用于那些没有一整天闲余时间，每天只能抽45分钟的人，甚至如何每天抽15分钟冥想或者做瑜伽、或者其他形式的意念练习。他做了两件事。**第一件，表明了冥想不到30年的人从中得到什么益处；第二件同样重要，它表明了因果关系的存在。**他的研究中有两组人，两组都想做冥想，他们都有这个兴趣。他让其中一组等候，他说，你们将在四个月后参加这个冥想班，你们将参加这个报满了的冥想班。第二组开始这个班的冥想练习，他们的联系就是每天冥想45分钟，周末时他们会聚在一起学习一些技巧，但在工作日时，他们呆在家里每天冥想45分钟。然后她那他们跟参考组对比，参考组就是那个等待参加冥想班的组，因为他希望试验对象都是想做冥想的人。一组已经开始冥想，另一组迟点再开始，然后他测量焦虑程度，对比参考组，那个冥想了8周的人的焦虑程度，平均每天45分钟，只做了八周，焦虑程度大大降低。然后他研究他们的快乐程度、积极的情绪，他不只关注消极情绪，从消极到积极的都关注。他们更快乐了，心情更好了，仅仅八周。但关键还在后头，他说，这还不够，“自我报告可能产生安慰剂效应”，这个想法很好，他要不受安慰剂影响的证据，然后他有了这个发现。
+    我们该怎么做呢？Jon Kabat—Zinn在他的研究中，告诉了我们冥想如何应用于那些没有一整天闲余时间，每天只能抽45分钟的人，甚至如何每天抽15分钟冥想或者做瑜伽、或者其他形式的意念练习。他做了两件事。**第一件，表明了冥想不到30年的人从中得到什么益处；第二件同样重要，它表明了因果关系的存在。**他的研究中有两组人，两组都想做冥想，他们都有这个兴趣。他让其中一组等候，他说，你们将在四个月后参加这个冥想班，你们将参加这个报满了的冥想班。第二组开始这个班的冥想练习，他们的联系就是每天冥想45分钟，周末时他们会聚在一起学习一些技巧，但在工作日时，他们呆在家里每天冥想45分钟。然后她那他们跟参考组对比，参考组就是那个等待参加冥想班的组，因为他希望试验对象都是想做冥想的人。一组已经开始冥想，另一组迟点再开始，然后他测量焦虑程度，对比参考组，那个冥想了8周的人的焦虑程度，平均每天45分钟，只做了八周，焦虑程度大大降低。然后他研究他们的快乐程度、积极的情绪，他不只关注消极情绪，从消极到积极的都关注。他们更快乐了，心情更好了，仅仅八周。但关键还在后头，他说，这还不够，“自我报告可能产生安慰剂效应”，这个想法很好，他要不受安慰剂影响的证据，然后他有了这个发现。
 
-        他研究他们的左右前额皮层比例，仅仅八周之后，那些冥想的人就出现显著的变化。这是一个惊人的结果。大家记住，1998年之前，科学家都深信大脑是不可塑的，过了三岁以后就不会改变。突然仅仅八周的练习，**这些冥想的人，每天有规律地冥想45分钟的人，改变了他们大脑的机能，使得他们更容易感染积极情绪，对痛苦的抵抗力更强。**
-
-
+    他研究他们的左右前额皮层比例，仅仅八周之后，那些冥想的人就出现显著的变化。这是一个惊人的结果。大家记住，1998年之前，科学家都深信大脑是不可塑的，过了三岁以后就不会改变。突然仅仅八周的练习，**这些冥想的人，每天有规律地冥想45分钟的人，改变了他们大脑的机能，使得他们更容易感染积极情绪，对痛苦的抵抗力更强。**
+```
 
 我们哈佛医学院的Herbert Benson，发现每天做15到20分钟的冥想，做了一段时间后，就能大大地改善健康，情绪健康和身体健康都改善了。因为Jon Kabat—Zinn做了另一个研究，他给两组人都注射了感冒细菌，他想测的是，他们体内的抗体会有什么反应。他发现冥想者的免疫反应比那些没有冥想的人强了很多。那些在等候冥想的人，只需八周的冥想，每天45分钟。
 
 你们知道当我们更平静时，我们对疾病的抵抗力就会增强，我们焦虑时就更容易患上疾病。**所以冥想能加强心里免疫系统，增强心理抵抗力，同时还能改善身体免疫系统。**
 
-        意志训练应用于很多领域，成为很多领域中的一种治疗方法，今天就更是如此了。配合认知疗法，配合药物、冥想、或者单纯冥想。研究已经表明这种方法非常有效。我推荐一本书，你想对这个领域有一个深刻的初步认识，推荐大家看《改善情绪的正念疗法》。这本书是讲，意念如何能帮我们克服严重抑郁、中度抑郁、或者焦虑，还能改善其他心理疾病。
+```
+    意志训练应用于很多领域，成为很多领域中的一种治疗方法，今天就更是如此了。配合认知疗法，配合药物、冥想、或者单纯冥想。研究已经表明这种方法非常有效。我推荐一本书，你想对这个领域有一个深刻的初步认识，推荐大家看《改善情绪的正念疗法》。这本书是讲，意念如何能帮我们克服严重抑郁、中度抑郁、或者焦虑，还能改善其他心理疾病。
 
-        例如这本书讲到的一件事，我们知道，很不幸，一旦一个人患了严重抑郁，复发的可能，不管是一周后，还是一年后，比从来没患过严重抑郁的人要高很多。为什么？回忆一下我们之前讲过的内容，我们讲过大脑是如何形成神经通路的。一旦神经通路形成，因为抑郁症的神经通路很强烈，通常一点相对不严重的事发生了，都能让这条神经通路活跃过来。我们有一段时间情绪不好，哪怕是一点小事，马上大脑就会寻找最大的那条神经通路，形象一点说，最大的那条河流，它就会找到那条通路。因为一点很小的原因，严重抑郁症复发了。复发了两三次后，神经通道更强烈了，复发可能性更高了。他发现，当他们进行正念冥想或正念疗法，再配以认知行为疗法，就能减少严重抑郁症复发的可能。那些患有，或曾经患过严重抑郁症的人，能减少50%的复发可能。这是一个纵向研究，这种方法真的很有用。还能改善中度以下的抑郁症，帮助处理悲伤情绪。
+    例如这本书讲到的一件事，我们知道，很不幸，一旦一个人患了严重抑郁，复发的可能，不管是一周后，还是一年后，比从来没患过严重抑郁的人要高很多。为什么？回忆一下我们之前讲过的内容，我们讲过大脑是如何形成神经通路的。一旦神经通路形成，因为抑郁症的神经通路很强烈，通常一点相对不严重的事发生了，都能让这条神经通路活跃过来。我们有一段时间情绪不好，哪怕是一点小事，马上大脑就会寻找最大的那条神经通路，形象一点说，最大的那条河流，它就会找到那条通路。因为一点很小的原因，严重抑郁症复发了。复发了两三次后，神经通道更强烈了，复发可能性更高了。他发现，当他们进行正念冥想或正念疗法，再配以认知行为疗法，就能减少严重抑郁症复发的可能。那些患有，或曾经患过严重抑郁症的人，能减少50%的复发可能。这是一个纵向研究，这种方法真的很有用。还能改善中度以下的抑郁症，帮助处理悲伤情绪。
 
-        这种方法是怎么起作用的？我简单地再说一次，我很推荐这本书，光用这本书就可以再开一门课程，这本书还介绍了一个很棒的八周疗法。
+    这种方法是怎么起作用的？我简单地再说一次，我很推荐这本书，光用这本书就可以再开一门课程，这本书还介绍了一个很棒的八周疗法。
 
-        **第一步是察觉，并接受身体信号。**这是什么意思？当我们感受到一种情绪时，通常会伴有一个身体反应。如像快乐这样的积极情绪，可能会忐忑，可能只是会感到上半身豁然开朗。痛苦情绪也有身体反应。例如，我个人来说，当我感到焦虑时，这里（喉咙），我能感受到它在这里。这里（胃），我以前讲过，就像胃里打了个结一样。感受到抑郁甚至悲伤的人，会感觉到它在某一身体部位，可能在胃，可能在肩膀。**一个情绪总是伴有身体反应的**。研究者认为，以及研究发现表明，当我们开始感受到痛苦情绪时，我们马上就要开始运用意念，开始找出这个身体反应在哪里，而不要钻牛角尖，“为什么我会抑郁”“怎么回事”“发生什么事了”“又犯了”“千万别又犯了”。我们不要马上想到这些，而是马上找出这个情绪的身体反应，想到身体。我感到有压力，好的，把注意力集中到这里（胃），接受这个结。不要尝试去消除它，这点我们稍后去谈，只需接受它的存在，看着它想，“真有趣，很大的一个结”。“不，很小，在变大了。”而不要想，“我想它消失，它消失了，真有趣”。这不是这一步的目的，这一步的目的只需察觉到它的存在，只需察觉到这种情绪引起的身体反应。
+    **第一步是察觉，并接受身体信号。**这是什么意思？当我们感受到一种情绪时，通常会伴有一个身体反应。如像快乐这样的积极情绪，可能会忐忑，可能只是会感到上半身豁然开朗。痛苦情绪也有身体反应。例如，我个人来说，当我感到焦虑时，这里（喉咙），我能感受到它在这里。这里（胃），我以前讲过，就像胃里打了个结一样。感受到抑郁甚至悲伤的人，会感觉到它在某一身体部位，可能在胃，可能在肩膀。**一个情绪总是伴有身体反应的**。研究者认为，以及研究发现表明，当我们开始感受到痛苦情绪时，我们马上就要开始运用意念，开始找出这个身体反应在哪里，而不要钻牛角尖，“为什么我会抑郁”“怎么回事”“发生什么事了”“又犯了”“千万别又犯了”。我们不要马上想到这些，而是马上找出这个情绪的身体反应，想到身体。我感到有压力，好的，把注意力集中到这里（胃），接受这个结。不要尝试去消除它，这点我们稍后去谈，只需接受它的存在，看着它想，“真有趣，很大的一个结”。“不，很小，在变大了。”而不要想，“我想它消失，它消失了，真有趣”。这不是这一步的目的，这一步的目的只需察觉到它的存在，只需察觉到这种情绪引起的身体反应。
 
-        **为什么这样能行得通？行得通是应为它形成了一条新的神经通路**。原来的神经通路下，当我们感到不适时，脑袋就会发现不适，苦苦思索它，通常就会走回原有的通路里。这些原来的通路是和我们的抑郁相连的，和我们之前的消极情绪相连，并且得到增强。我们现在要做的，是走回我们脑袋里这些增强了的通路上，并且再一次增强他们，并形成一条新的通路。痛了？我们进入身体。那个方法管用是因为当我们形成新通路时，它通往我们身体的自然治愈能力。我们患上的大部分疾病，不是全部，但大部分疾病身体都能自行治愈。大部分切上的伤口你不用管它。事实上你不应该处理小伤口，你不用弄它、看它、摸它，让自然的力量来治愈它。它会自己愈合的，消化也一样。你用不着想着消化，身体有自己的内在智慧、内在医生。同样道理，当你不再集中注意力想“我该怎么消除它，怎么回事？太难受了，我不想这么难受，我希望快点好起来。为什么我会这么难受？因为什么原因？”有时候这样想它、分析它，把它写下来很重要，但不要钻牛角尖；或者跟人谈谈，但不要钻牛角尖。最有效的，大部分情况下，就是马上想到身体的感觉，察觉它、接受它，不要尝试去治好它。让它留在那里，观察它，我们内在的医生就会治好它。
+    **为什么这样能行得通？行得通是应为它形成了一条新的神经通路**。原来的神经通路下，当我们感到不适时，脑袋就会发现不适，苦苦思索它，通常就会走回原有的通路里。这些原来的通路是和我们的抑郁相连的，和我们之前的消极情绪相连，并且得到增强。我们现在要做的，是走回我们脑袋里这些增强了的通路上，并且再一次增强他们，并形成一条新的通路。痛了？我们进入身体。那个方法管用是因为当我们形成新通路时，它通往我们身体的自然治愈能力。我们患上的大部分疾病，不是全部，但大部分疾病身体都能自行治愈。大部分切上的伤口你不用管它。事实上你不应该处理小伤口，你不用弄它、看它、摸它，让自然的力量来治愈它。它会自己愈合的，消化也一样。你用不着想着消化，身体有自己的内在智慧、内在医生。同样道理，当你不再集中注意力想“我该怎么消除它，怎么回事？太难受了，我不想这么难受，我希望快点好起来。为什么我会这么难受？因为什么原因？”有时候这样想它、分析它，把它写下来很重要，但不要钻牛角尖；或者跟人谈谈，但不要钻牛角尖。最有效的，大部分情况下，就是马上想到身体的感觉，察觉它、接受它，不要尝试去治好它。让它留在那里，观察它，我们内在的医生就会治好它。
 
-        **要熟练运用这种方法，关键是练习。练习，一次又一次地练习**，就像我们在课堂上讲到的其他方法一样，没有捷径。怎么练习？这是书中八周疗法的一部分，我也在练，首先是身体扫描，了解你的身体，躺下来思考观察。先从你的脚开始，然后了解你的膝盖，了解你胯部的感觉，了解你胃的感觉。每一个身体部位都是，了解整个身体。多练习，多了解，这是冷状态下的练习，在模拟状态下的练习。当我们在热状态下，当我们真正感受到那种痛苦情绪时，我们就准备好用这种方法，我们知道怎么用。练习时，如果我们精神分散了，在集中起来，这是练习。练习并不表示30分钟都要完全集中注意力，练习时，精神分散了，再集中；精神分散了，再集中。然后在现实生活中也要练习。所以当我感到压力时，我想“好的，这种情绪引起什么身体反应？”
+    **要熟练运用这种方法，关键是练习。练习，一次又一次地练习**，就像我们在课堂上讲到的其他方法一样，没有捷径。怎么练习？这是书中八周疗法的一部分，我也在练，首先是身体扫描，了解你的身体，躺下来思考观察。先从你的脚开始，然后了解你的膝盖，了解你胯部的感觉，了解你胃的感觉。每一个身体部位都是，了解整个身体。多练习，多了解，这是冷状态下的练习，在模拟状态下的练习。当我们在热状态下，当我们真正感受到那种痛苦情绪时，我们就准备好用这种方法，我们知道怎么用。练习时，如果我们精神分散了，在集中起来，这是练习。练习并不表示30分钟都要完全集中注意力，练习时，精神分散了，再集中；精神分散了，再集中。然后在现实生活中也要练习。所以当我感到压力时，我想“好的，这种情绪引起什么身体反应？”
 
-        **怎么练习？**举个例子。例如我想到今晚我要做的一个讲座。 我感到很紧张。很多观众，重要的观众。每次想到这，我第一个反应就是紧张。我感觉这里的肾上腺素，很难受，感到我的胃打了一个结。我怎么办？每次想到这讲座，我就会想“好的，这个身体反应在哪里？”另一个办法就是用认知重建它。不要觉得他是压力，觉得他是荣幸。我刚才说过，我要跟一个很大的客户谈，我为这次演讲感到很大的压力，每次我脑袋想到这压力时，马上我跟自己说：“不，这是荣幸。” 我能有这样的机会做讲座真是太棒了。重申，这不同于逃避，不同于抑制，有时候只需要接受它，明白这是人之常情，但是苦苦思索这种情绪是没用的，只会加强这条神经通路，**这种反应或者专注于身体，或者专注认知重建，都很有用**。记得当我们想改变时，我们要想到尽可能多的可能性。想到作用，行为，认知的方法。这是其中两个有用的办法。我经常用这种方法，或专注于身体，或专注于认知重建。非常有用。有数据证明它多有用。
+    **怎么练习？**举个例子。例如我想到今晚我要做的一个讲座。 我感到很紧张。很多观众，重要的观众。每次想到这，我第一个反应就是紧张。我感觉这里的肾上腺素，很难受，感到我的胃打了一个结。我怎么办？每次想到这讲座，我就会想“好的，这个身体反应在哪里？”另一个办法就是用认知重建它。不要觉得他是压力，觉得他是荣幸。我刚才说过，我要跟一个很大的客户谈，我为这次演讲感到很大的压力，每次我脑袋想到这压力时，马上我跟自己说：“不，这是荣幸。” 我能有这样的机会做讲座真是太棒了。重申，这不同于逃避，不同于抑制，有时候只需要接受它，明白这是人之常情，但是苦苦思索这种情绪是没用的，只会加强这条神经通路，**这种反应或者专注于身体，或者专注认知重建，都很有用**。记得当我们想改变时，我们要想到尽可能多的可能性。想到作用，行为，认知的方法。这是其中两个有用的办法。我经常用这种方法，或专注于身体，或专注于认知重建。非常有用。有数据证明它多有用。
 
-        我们也来做一次**简单的正念冥想**，运用我讲过的一些方法，和我们以前讲过的一些内容。大家尽可能舒服地坐在座位上。后背挺直，如果背靠着椅子更舒服的话，就靠吧。把脖子尽量伸长。上半身形成一条直线，把脚尽量舒服地放在地板上，如果觉得交叉着腿不舒服的，就放下来。可以把你的手放在腿上，也可以合起来，你觉得舒服就行。如果你觉得闭上眼睛舒服的就闭上。不管你的注意力在哪里，都把它集中在你的呼吸上，深深地吸进腹部，然后慢慢地轻轻地呼出来，深吸一口气，慢慢地轻轻地呼出来，重复几次，如果你的精神分散了，慢慢把它集中回呼吸和练习上就行了。一边呼吸一边转移你的注意力，转移到你的身体上，你的脚小腿腿手腕腹部背，扫描你的全身，你的胸膛，脖子，头，找出你身体觉得微微紧张的地方，比其他部位更紧张的地方，没有其他部位那么放松的地方，不管是哪个身体部位，把你的注意力转移到上面，观察不适，观察这股紧张感，观察它，接受它。继续一边深呼吸，一边观察这个身体部位，看看这多有趣，你哪个部位有这样的一个感觉，每呼吸一次就接受它，你的感觉，没有对错之分，这只是一种感觉，继续深呼吸，吸进那个部位，再从那个部位呼出来，只需观察它，接受它，与他同在，继续与你那个身体部位同在，一边呼吸，一边感受这种感觉，不管是什么感觉，感受它。然后轻轻的把注意力从那个部位移开，轻轻地，因为你有就接受他了，你要回到呼吸上，用你的呼吸洗涤整个身体，从你的灵魂开始，从下到上一直到你的头，每次呼吸，平静加深了，接受加深了，存在加深了，体验，感受这股轻松感，因接受带来的轻松，自然状态下的轻松。再深吸一口气，慢慢地轻轻地呼出来，吸完下一口气，睁开你的眼睛，如果你旁边的同学睡着了，轻轻地推他们一下或者抱一下他们。
+    我们也来做一次**简单的正念冥想**，运用我讲过的一些方法，和我们以前讲过的一些内容。大家尽可能舒服地坐在座位上。后背挺直，如果背靠着椅子更舒服的话，就靠吧。把脖子尽量伸长。上半身形成一条直线，把脚尽量舒服地放在地板上，如果觉得交叉着腿不舒服的，就放下来。可以把你的手放在腿上，也可以合起来，你觉得舒服就行。如果你觉得闭上眼睛舒服的就闭上。不管你的注意力在哪里，都把它集中在你的呼吸上，深深地吸进腹部，然后慢慢地轻轻地呼出来，深吸一口气，慢慢地轻轻地呼出来，重复几次，如果你的精神分散了，慢慢把它集中回呼吸和练习上就行了。一边呼吸一边转移你的注意力，转移到你的身体上，你的脚小腿腿手腕腹部背，扫描你的全身，你的胸膛，脖子，头，找出你身体觉得微微紧张的地方，比其他部位更紧张的地方，没有其他部位那么放松的地方，不管是哪个身体部位，把你的注意力转移到上面，观察不适，观察这股紧张感，观察它，接受它。继续一边深呼吸，一边观察这个身体部位，看看这多有趣，你哪个部位有这样的一个感觉，每呼吸一次就接受它，你的感觉，没有对错之分，这只是一种感觉，继续深呼吸，吸进那个部位，再从那个部位呼出来，只需观察它，接受它，与他同在，继续与你那个身体部位同在，一边呼吸，一边感受这种感觉，不管是什么感觉，感受它。然后轻轻的把注意力从那个部位移开，轻轻地，因为你有就接受他了，你要回到呼吸上，用你的呼吸洗涤整个身体，从你的灵魂开始，从下到上一直到你的头，每次呼吸，平静加深了，接受加深了，存在加深了，体验，感受这股轻松感，因接受带来的轻松，自然状态下的轻松。再深吸一口气，慢慢地轻轻地呼出来，吸完下一口气，睁开你的眼睛，如果你旁边的同学睡着了，轻轻地推他们一下或者抱一下他们。
 
-        整年冥想，正念疗法。真的能改变我们的思维，我们练习这种正念冥想时，我们的注意力从作为转移到了不作为上。什么意思？通常当我们感到有压力时，或者我们的头脑陷入悲伤情绪时，我们第一反应就是，怎么解决它。我怎么解决它？我们通过想其他办法来解决它，或者想办法让自己好受点，或者分析我们面对的问题。为什么?因为我们这种解决问题的思维管用。因为有解决问题的思维，我们才有科学，才有技术和进步。因为解决问题，分析问题的思维，你们才考进哈佛，你们能考进来不是因为你们是成功的冥想家，你们能考进来，是因为你们考试成绩好，你们能解答SAT上的问题，这是好事，这是重要的技能，但通常它有反作用，尤其是用它来处理思维和心理问题时，我们会不由自主应用它，我们想解决问题，但通常会适得其反，同样会有反作用的，是我们想干预体内的消化过程时。消化不受我们控制，如果我们想左右它，看清它，分析它，促进它，我们只会伤害它。为什么？**因为我们体内的主宰，体内的医生，体内的智慧最擅长处理某些事。**不是所有的事，是某些事。还有消化，还有通常的，不是所有的。通常的神经问题，痛苦的情绪，所有我们要把我们的注意力从解决这个问题转移到与它同在。感受这种痛苦的身体反应，在他的书中，在牛津任职的william说，“想消除抑郁是通常的解决方法，想解决不对劲的地方只会让我们陷得更深。苦苦思索是问题症结之一，不是解决办法。”这里强调苦苦思索，他并不等同于…我们之前谈过，他并不等同于与写日记，他没有益处的，把你面对的问题写进日记里，是有益与你的，和亲密朋友谈谈，是有益与你的，但是如果钻牛角尖，一次又一次的思索这个问题，苦苦思索它，想解决它，通常会使它恶化，如果我们只是感受这股情绪，感受身体反应，反而会更好。大家试试，哪种方法适合自己。也许适合你的是，找个时间写半个小时，然后冥想10分钟，也许光是写适合你，每个人方法都不同。我给大家讲这些，只是希望教大家另一个心理工具，例如我们可以利用认知重建，把威胁看成挑战，把威胁看成荣幸，把失败看成一次学习机会，我们也能情绪重建，不要对情绪苦苦思索，而是去感受它，“不要尝试无视和消除身体不适，而是抱着关系之心关注它，我们就能够真真正正地改变我们的感受。”
+    整年冥想，正念疗法。真的能改变我们的思维，我们练习这种正念冥想时，我们的注意力从作为转移到了不作为上。什么意思？通常当我们感到有压力时，或者我们的头脑陷入悲伤情绪时，我们第一反应就是，怎么解决它。我怎么解决它？我们通过想其他办法来解决它，或者想办法让自己好受点，或者分析我们面对的问题。为什么?因为我们这种解决问题的思维管用。因为有解决问题的思维，我们才有科学，才有技术和进步。因为解决问题，分析问题的思维，你们才考进哈佛，你们能考进来不是因为你们是成功的冥想家，你们能考进来，是因为你们考试成绩好，你们能解答SAT上的问题，这是好事，这是重要的技能，但通常它有反作用，尤其是用它来处理思维和心理问题时，我们会不由自主应用它，我们想解决问题，但通常会适得其反，同样会有反作用的，是我们想干预体内的消化过程时。消化不受我们控制，如果我们想左右它，看清它，分析它，促进它，我们只会伤害它。为什么？**因为我们体内的主宰，体内的医生，体内的智慧最擅长处理某些事。**不是所有的事，是某些事。还有消化，还有通常的，不是所有的。通常的神经问题，痛苦的情绪，所有我们要把我们的注意力从解决这个问题转移到与它同在。感受这种痛苦的身体反应，在他的书中，在牛津任职的william说，“想消除抑郁是通常的解决方法，想解决不对劲的地方只会让我们陷得更深。苦苦思索是问题症结之一，不是解决办法。”这里强调苦苦思索，他并不等同于…我们之前谈过，他并不等同于与写日记，他没有益处的，把你面对的问题写进日记里，是有益与你的，和亲密朋友谈谈，是有益与你的，但是如果钻牛角尖，一次又一次的思索这个问题，苦苦思索它，想解决它，通常会使它恶化，如果我们只是感受这股情绪，感受身体反应，反而会更好。大家试试，哪种方法适合自己。也许适合你的是，找个时间写半个小时，然后冥想10分钟，也许光是写适合你，每个人方法都不同。我给大家讲这些，只是希望教大家另一个心理工具，例如我们可以利用认知重建，把威胁看成挑战，把威胁看成荣幸，把失败看成一次学习机会，我们也能情绪重建，不要对情绪苦苦思索，而是去感受它，“不要尝试无视和消除身体不适，而是抱着关系之心关注它，我们就能够真真正正地改变我们的感受。”
 
-        今天我教大家最后一个方法，这个方法很重要，我非常推荐，你们这里所有的人都学，没有例外，**我非常推荐的方法是呼吸，呼吸很重要。事实上，他是唯一，所有正面冥想的共通点，你可以把他运用到生活中，当然是说的呼吸是正确呼吸，你可以运用到生活中。**即使你没有一天冥想15分钟，或45分钟，我所说的呼吸是深呼吸，因为现实情况是，在现代世界，我们经常感到紧张焦虑，因为我们的呼吸变得很浅，因为呼吸很浅，但我们呼吸浅时，我们就变得更紧张焦虑，我们就会陷入一个恶性循环，一个“或战或逃反应”的恶性循环。我们平常就是这样处理的，庆幸的是我们可以扭转这种循环，我们可以马上扭转它，因为我们还知道，平静和健康促进我们深呼吸，深呼吸又能反过来促进平静和健康，我们可以扭转这种“或战或逃”的反应，进入Herbert benson所说的，放松反应，只需要三个深呼吸的时间，我们可以把这个三个深呼吸的办法，有计划的应用在一天的生活中，上课前，下课后，早上醒来时，或者上床睡觉前。三个深呼吸，有计划的安排在一天的时间上，能改变你的人生。Andrew weil我们医学院的毕业生，现在任职于亚利桑那洲大学，他在很棒的CD中，他这样说呼吸，“如果我只能说一条健康生活的建议，答案很简单，学习正确呼吸。”这意味着像婴儿一样呼吸，吸进腹部。我说过这节可不会教什么新的知识了，你们都知道怎么呼吸，你们一出生就知道怎么呼吸，现在我们要做的就是去除多余的牵绊，求助于你的自然智慧，自然医生。
+    今天我教大家最后一个方法，这个方法很重要，我非常推荐，你们这里所有的人都学，没有例外，**我非常推荐的方法是呼吸，呼吸很重要。事实上，他是唯一，所有正面冥想的共通点，你可以把他运用到生活中，当然是说的呼吸是正确呼吸，你可以运用到生活中。**即使你没有一天冥想15分钟，或45分钟，我所说的呼吸是深呼吸，因为现实情况是，在现代世界，我们经常感到紧张焦虑，因为我们的呼吸变得很浅，因为呼吸很浅，但我们呼吸浅时，我们就变得更紧张焦虑，我们就会陷入一个恶性循环，一个“或战或逃反应”的恶性循环。我们平常就是这样处理的，庆幸的是我们可以扭转这种循环，我们可以马上扭转它，因为我们还知道，平静和健康促进我们深呼吸，深呼吸又能反过来促进平静和健康，我们可以扭转这种“或战或逃”的反应，进入Herbert benson所说的，放松反应，只需要三个深呼吸的时间，我们可以把这个三个深呼吸的办法，有计划的应用在一天的生活中，上课前，下课后，早上醒来时，或者上床睡觉前。三个深呼吸，有计划的安排在一天的时间上，能改变你的人生。Andrew weil我们医学院的毕业生，现在任职于亚利桑那洲大学，他在很棒的CD中，他这样说呼吸，“如果我只能说一条健康生活的建议，答案很简单，学习正确呼吸。”这意味着像婴儿一样呼吸，吸进腹部。我说过这节可不会教什么新的知识了，你们都知道怎么呼吸，你们一出生就知道怎么呼吸，现在我们要做的就是去除多余的牵绊，求助于你的自然智慧，自然医生。
 
-        在一本很棒的书里，Alia Crum的父亲和Ellen Langer写了这篇文章，她父亲Thmas Crum提了几个很好的建议，如何扭转“或逃或战”反应，他的其中一个建议，就是每次遇到红灯，把他当做一个深呼吸的机会，不管是走路还是遇到红灯，或者在车里。以前我用过这种方法，每次遇到红灯时，都很烦躁，尤其是刚刚从绿灯转成红灯时，现在每次遇到红灯，我都把它当做一个机会，深深呼吸，在生活中学和深呼吸，一天几次，能产生深远影响，我们下周见。在此之前我们深呼吸。
+    在一本很棒的书里，Alia Crum的父亲和Ellen Langer写了这篇文章，她父亲Thmas Crum提了几个很好的建议，如何扭转“或逃或战”反应，他的其中一个建议，就是每次遇到红灯，把他当做一个深呼吸的机会，不管是走路还是遇到红灯，或者在车里。以前我用过这种方法，每次遇到红灯时，都很烦躁，尤其是刚刚从绿灯转成红灯时，现在每次遇到红灯，我都把它当做一个机会，深深呼吸，在生活中学和深呼吸，一天几次，能产生深远影响，我们下周见。在此之前我们深呼吸。
+```
 
 
 
