--- a/17.md
+++ b/17.md
@@ -1,6 +1,6 @@
 **哈佛幸福课第十七讲运动与冥想**
 
-&nbsp&nbsp大家早上好！我们接着讲上节课没讲完的内容。开始讲之前，上节课后有同学来找我，问我有没有其他的运动选择，我上次讲的研究，希望大家也去看看，就是Callaghan等人写的那篇文章，里面侧重讲的是**有氧运动**，我之前也提过，做这运动的目的是缓和高强度运动，做这种运动，你会达到最大心率的70%，大约在最大心率的65%到75%之间，大家搜索心率运动，就马上得到想查的各种心率表。这是其中一种运动形式，有些同学问：“举重训练行不行，间歇训练行不行？”快跑，休息，再快跑，再休息，这是划艇队经常做的训练，运动员经常做的训练，这些运动行不行，我上节课没有专门提出，是因为目前对其他的运动还没有定论。我可以告诉大家，目前在研究中发现的一些趋势，目前看来，如果你只能做一种运动，那么最佳选择，时间最花得其所的是有氧运动，理想地每周三四次半小时的有氧运动，这是最低要求。但是，如果你还能做举重训练以补充有氧运动，那也很好，一周两三次举重训练非常好，尤其是年纪大了以后，但在年轻时，举重训练也很好，但是它不能代替有氧运动。
+ &emsp&emsp大家早上好！我们接着讲上节课没讲完的内容。开始讲之前，上节课后有同学来找我，问我有没有其他的运动选择，我上次讲的研究，希望大家也去看看，就是Callaghan等人写的那篇文章，里面侧重讲的是**有氧运动**，我之前也提过，做这运动的目的是缓和高强度运动，做这种运动，你会达到最大心率的70%，大约在最大心率的65%到75%之间，大家搜索心率运动，就马上得到想查的各种心率表。这是其中一种运动形式，有些同学问：“举重训练行不行，间歇训练行不行？”快跑，休息，再快跑，再休息，这是划艇队经常做的训练，运动员经常做的训练，这些运动行不行，我上节课没有专门提出，是因为目前对其他的运动还没有定论。我可以告诉大家，目前在研究中发现的一些趋势，目前看来，如果你只能做一种运动，那么最佳选择，时间最花得其所的是有氧运动，理想地每周三四次半小时的有氧运动，这是最低要求。但是，如果你还能做举重训练以补充有氧运动，那也很好，一周两三次举重训练非常好，尤其是年纪大了以后，但在年轻时，举重训练也很好，但是它不能代替有氧运动。
 
 研究发现它改善心理健康的效果，不如有氧运动，另外一种运动，在经过研究后，我要重申，这些都是初步结果，有人对这种运动做过初步研究，最后结果，因为样本不足，暂时无法下确切结论，但我们可以确切地说\_\_有氧运动产生的效果能媲美一些强效精神病药物\_\_，这个结论是确切的，有大量研究来支持，包括Babyak 2000年以来的研究，以及以前的另一种开始被研究的运动，得出可喜的结果，那就是\_\_间歇运动\_\_。间歇运动就是，以跑步为例子，达到最大心率的90%到95%。如果你20岁，你最大心率就是200，计算公式就是220减去年龄，所以你跑步的心率要达到180到190，强度非常高，不能持续很长时间，但如果能持续到30秒到一分钟，然后休息，让你的心率下降到最大心率的60%，也就是120，然后重复这个间歇运动。有初步表明这种运动，能产生显著效果，通常效果甚至比单纯有氧运动更大，而且持续时间更长。所以，再说回来，我没有在课堂上正式介绍这种运动，但很多同学问起，所以现在介绍一下。因为我只想给大家介绍那些有确切结论的运动，John Ratey也谈过这种运动，我等一下会讲他。他是哈佛医学院的精神医生，可以说他是一个前沿的倡导者，在研究运动和精神健康这个领域。他本身……虽然目前的结果是初步的，但他一周会做两次间歇运动，除了一周做六天运动以外，其中两天还会做全速短跑，休息，全速短跑，休息，研究表明即使没有做够30分钟，但还能得到同等的效果，同等的甚至更好的心理效果。我一周也会做两次间歇运动，所以，我举两个例子，今天早上我在蹦床上跳了30分钟，在这30分钟里，我还做了4个短跑，没错，你们不相信我会跳蹦床，是吧？我下次拍下来，还是不要了。4次短跑，我戴着心率监测仪，快速跑一段，我的心率大约是165，165到170之间，然后休息，下降到110，少于我最大心率的60%，如此重复四次，这30分钟里其余的时间，我只做缓和的有氧运动，所以我也做间歇运动，举重训练就比较少做，因为我做瑜伽时，就有这种加强体能的效果。但最重要的一点是，我想说，间歇运动，特别是对于完美主义者来说，很容易导致训练过度，大家最好不要达到最大心率，并且持续一段时间，即使你做得来，更多并不意味着更好。再说一次，除非你是备战奥运，这种情况下有时你就要达到，100%的最高心率，想练出最健康的身体，达到90%......最大心率的95%就行了。所以戴上心率监测仪就很有用，因为它能告诉你，运动是否强度太大，或者强度不足。总之，换换花样有助于运动，你可以跳舞，这也是好运动，你可以偶尔去健身室健身，偶尔打篮球，划艇，花样越多越好，只要保证，至少\_\_对我们来说，一周四次，一次30分钟的有氧运动。
 
