--- a/17.md
+++ b/17.md
@@ -1,12 +1,12 @@
 **哈佛幸福课第十七讲运动与冥想**
 
-  大家早上好！我们接着讲上节课没讲完的内容。开始讲之前，上节课后有同学来找我，问我有没有其他的运动选择，我上次讲的研究，希望大家也去看看，就是Callaghan等人写的那篇文章，里面侧重讲的是**有氧运动**，我之前也提过，做这运动的目的是缓和高强度运动，做这种运动，你会达到最大心率的70%，大约在最大心率的65%到75%之间，大家搜索心率运动，就马上得到想查的各种心率表。这是其中一种运动形式，有些同学问：“举重训练行不行，间歇训练行不行？”快跑，休息，再快跑，再休息，这是划艇队经常做的训练，运动员经常做的训练，这些运动行不行，我上节课没有专门提出，是因为目前对其他的运动还没有定论。我可以告诉大家，目前在研究中发现的一些趋势，目前看来，如果你只能做一种运动，那么最佳选择，时间最花得其所的是有氧运动，理想地每周三四次半小时的有氧运动，这是最低要求。但是，如果你还能做举重训练以补充有氧运动，那也很好，一周两三次举重训练非常好，尤其是年纪大了以后，但在年轻时，举重训练也很好，但是它不能代替有氧运动。
+&emsp&emsp大家早上好！我们接着讲上节课没讲完的内容。开始讲之前，上节课后有同学来找我，问我有没有其他的运动选择，我上次讲的研究，希望大家也去看看，就是Callaghan等人写的那篇文章，里面侧重讲的是**有氧运动**，我之前也提过，做这运动的目的是缓和高强度运动，做这种运动，你会达到最大心率的70%，大约在最大心率的65%到75%之间，大家搜索心率运动，就马上得到想查的各种心率表。这是其中一种运动形式，有些同学问：“举重训练行不行，间歇训练行不行？”快跑，休息，再快跑，再休息，这是划艇队经常做的训练，运动员经常做的训练，这些运动行不行，我上节课没有专门提出，是因为目前对其他的运动还没有定论。我可以告诉大家，目前在研究中发现的一些趋势，目前看来，如果你只能做一种运动，那么最佳选择，时间最花得其所的是有氧运动，理想地每周三四次半小时的有氧运动，这是最低要求。但是，如果你还能做举重训练以补充有氧运动，那也很好，一周两三次举重训练非常好，尤其是年纪大了以后，但在年轻时，举重训练也很好，但是它不能代替有氧运动。
 
-  研究发现它改善心理健康的效果，不如有氧运动，另外一种运动，在经过研究后，我要重申，这些都是初步结果，有人对这种运动做过初步研究，最后结果，因为样本不足，暂时无法下确切结论，但我们可以确切地说\_\_有氧运动产生的效果能媲美一些强效精神病药物\_\_，这个结论是确切的，有大量研究来支持，包括Babyak 2000年以来的研究，以及以前的另一种开始被研究的运动，得出可喜的结果，那就是\_\_间歇运动\_\_。间歇运动就是，以跑步为例子，达到最大心率的90%到95%。如果你20岁，你最大心率就是200，计算公式就是220减去年龄，所以你跑步的心率要达到180到190，强度非常高，不能持续很长时间，但如果能持续到30秒到一分钟，然后休息，让你的心率下降到最大心率的60%，也就是120，然后重复这个间歇运动。有初步表明这种运动，能产生显著效果，通常效果甚至比单纯有氧运动更大，而且持续时间更长。所以，再说回来，我没有在课堂上正式介绍这种运动，但很多同学问起，所以现在介绍一下。因为我只想给大家介绍那些有确切结论的运动，John Ratey也谈过这种运动，我等一下会讲他。他是哈佛医学院的精神医生，可以说他是一个前沿的倡导者，在研究运动和精神健康这个领域。他本身……虽然目前的结果是初步的，但他一周会做两次间歇运动，除了一周做六天运动以外，其中两天还会做全速短跑，休息，全速短跑，休息，研究表明即使没有做够30分钟，但还能得到同等的效果，同等的甚至更好的心理效果。我一周也会做两次间歇运动，所以，我举两个例子，今天早上我在蹦床上跳了30分钟，在这30分钟里，我还做了4个短跑，没错，你们不相信我会跳蹦床，是吧？我下次拍下来，还是不要了。4次短跑，我戴着心率监测仪，快速跑一段，我的心率大约是165，165到170之间，然后休息，下降到110，少于我最大心率的60%，如此重复四次，这30分钟里其余的时间，我只做缓和的有氧运动，所以我也做间歇运动，举重训练就比较少做，因为我做瑜伽时，就有这种加强体能的效果。但最重要的一点是，我想说，间歇运动，特别是对于完美主义者来说，很容易导致训练过度，大家最好不要达到最大心率，并且持续一段时间，即使你做得来，更多并不意味着更好。再说一次，除非你是备战奥运，这种情况下有时你就要达到，100%的最高心率，想练出最健康的身体，达到90%......最大心率的95%就行了。所以戴上心率监测仪就很有用，因为它能告诉你，运动是否强度太大，或者强度不足。总之，换换花样有助于运动，你可以跳舞，这也是好运动，你可以偶尔去健身室健身，偶尔打篮球，划艇，花样越多越好，只要保证，至少\_\_对我们来说，一周四次，一次30分钟的有氧运动。
+&emsp&emsp研究发现它改善心理健康的效果，不如有氧运动，另外一种运动，在经过研究后，我要重申，这些都是初步结果，有人对这种运动做过初步研究，最后结果，因为样本不足，暂时无法下确切结论，但我们可以确切地说\_\_有氧运动产生的效果能媲美一些强效精神病药物\_\_，这个结论是确切的，有大量研究来支持，包括Babyak 2000年以来的研究，以及以前的另一种开始被研究的运动，得出可喜的结果，那就是\_\_间歇运动\_\_。间歇运动就是，以跑步为例子，达到最大心率的90%到95%。如果你20岁，你最大心率就是200，计算公式就是220减去年龄，所以你跑步的心率要达到180到190，强度非常高，不能持续很长时间，但如果能持续到30秒到一分钟，然后休息，让你的心率下降到最大心率的60%，也就是120，然后重复这个间歇运动。有初步表明这种运动，能产生显著效果，通常效果甚至比单纯有氧运动更大，而且持续时间更长。所以，再说回来，我没有在课堂上正式介绍这种运动，但很多同学问起，所以现在介绍一下。因为我只想给大家介绍那些有确切结论的运动，John Ratey也谈过这种运动，我等一下会讲他。他是哈佛医学院的精神医生，可以说他是一个前沿的倡导者，在研究运动和精神健康这个领域。他本身……虽然目前的结果是初步的，但他一周会做两次间歇运动，除了一周做六天运动以外，其中两天还会做全速短跑，休息，全速短跑，休息，研究表明即使没有做够30分钟，但还能得到同等的效果，同等的甚至更好的心理效果。我一周也会做两次间歇运动，所以，我举两个例子，今天早上我在蹦床上跳了30分钟，在这30分钟里，我还做了4个短跑，没错，你们不相信我会跳蹦床，是吧？我下次拍下来，还是不要了。4次短跑，我戴着心率监测仪，快速跑一段，我的心率大约是165，165到170之间，然后休息，下降到110，少于我最大心率的60%，如此重复四次，这30分钟里其余的时间，我只做缓和的有氧运动，所以我也做间歇运动，举重训练就比较少做，因为我做瑜伽时，就有这种加强体能的效果。但最重要的一点是，我想说，间歇运动，特别是对于完美主义者来说，很容易导致训练过度，大家最好不要达到最大心率，并且持续一段时间，即使你做得来，更多并不意味着更好。再说一次，除非你是备战奥运，这种情况下有时你就要达到，100%的最高心率，想练出最健康的身体，达到90%......最大心率的95%就行了。所以戴上心率监测仪就很有用，因为它能告诉你，运动是否强度太大，或者强度不足。总之，换换花样有助于运动，你可以跳舞，这也是好运动，你可以偶尔去健身室健身，偶尔打篮球，划艇，花样越多越好，只要保证，至少\_\_对我们来说，一周四次，一次30分钟的有氧运动。
 
-上节课，我们讲到**克服障碍**，其中一些障碍包括，**伴随运动而来的疼痛**，使运动更难了，即使你只达到最大心率的70%，运动引起不适，克服不适的最简单方法是进入状态，因为通常我们跑步进入一种状态后，我们就感受不到不适了，但必须开了头才行，找别人来支持你克服困难，慢慢适应，用一些东西分散注意力，例如是电视，MP3，能分散注意力就行了。另一个障碍，很不幸，这个障碍在校园很普遍，那就是我们\*\*没有时间\*\*，大家知道，在高中，我经常去高中演讲，我注意到的其中一件事是，通常，很多高中要求学生参加团队活动，他们除了体育课做运动外，还要参加团队活动，所以他们运动得更多，虽然还是不够，但是我们读大学第一件放弃的事，尤其是那些不参加团队活动的学生，我们放弃的第一件事就是运动。
+&emsp&emsp上节课，我们讲到**克服障碍**，其中一些障碍包括，**伴随运动而来的疼痛**，使运动更难了，即使你只达到最大心率的70%，运动引起不适，克服不适的最简单方法是进入状态，因为通常我们跑步进入一种状态后，我们就感受不到不适了，但必须开了头才行，找别人来支持你克服困难，慢慢适应，用一些东西分散注意力，例如是电视，MP3，能分散注意力就行了。另一个障碍，很不幸，这个障碍在校园很普遍，那就是我们\*\*没有时间\*\*，大家知道，在高中，我经常去高中演讲，我注意到的其中一件事是，通常，很多高中要求学生参加团队活动，他们除了体育课做运动外，还要参加团队活动，所以他们运动得更多，虽然还是不够，但是我们读大学第一件放弃的事，尤其是那些不参加团队活动的学生，我们放弃的第一件事就是运动。
 
-\`我没有时间，我有很多事要做\`，大学是一个新的世界，在考试期间，大家也首先就放弃运动，因为我们压力太大了，我有太多事要做了，其实，最不能放弃的是运动，最不能放弃的是运动。为什么？因为它是一项投资，虽然你失去了45分钟，你知道，运动30分钟之后洗衣个澡，我推荐大家这么做，虽然你失去了45分钟，但你获得了更多，这时间花得其所。为什么？因为做运动，记忆力提高，所以你更能充分利用学习时间，你的创造力提高了，精神更集中，不管你是否有多动症，有就更要运动了，或者你有患多动症的趋势，即使对于没有多动症的人来说，运动也能大大提高注意力集中，活力显著提高，所以这时间花得其所。大家还记得我讲过，壁球赛季末我停止运动的事吗？突然我觉得我有了很多时间，但我完成的工作反而少了，第一因为我的生活规律打乱了，第二因为我注意力没那么集中了，我创造力下降了，活力下降了。最不能放弃的是运动，尤其是在考试期间这种压力大的时候。克服时间不足这个问题，不能靠自律，之前我已经讲过了，**我们看过那个研究，人的自律是有限的。我们要自己形成规律**，例如一周中有三个早上做运动，如果下午晚上才有空，那也行，行成一个时间规律。
+&emsp&emsp\`**我没有时间，我有很多事要做**\`，大学是一个新的世界，在考试期间，大家也首先就放弃运动，因为我们压力太大了，我有太多事要做了，其实，最不能放弃的是运动，最不能放弃的是运动。为什么？因为它是一项投资，虽然你失去了45分钟，你知道，运动30分钟之后洗衣个澡，我推荐大家这么做，虽然你失去了45分钟，但你获得了更多，这时间花得其所。为什么？因为做运动，记忆力提高，所以你更能充分利用学习时间，你的创造力提高了，精神更集中，不管你是否有多动症，有就更要运动了，或者你有患多动症的趋势，即使对于没有多动症的人来说，运动也能大大提高注意力集中，活力显著提高，所以这时间花得其所。大家还记得我讲过，壁球赛季末我停止运动的事吗？突然我觉得我有了很多时间，但我完成的工作反而少了，第一因为我的生活规律打乱了，第二因为我注意力没那么集中了，我创造力下降了，活力下降了。最不能放弃的是运动，尤其是在考试期间这种压力大的时候。克服时间不足这个问题，不能靠自律，之前我已经讲过了，**我们看过那个研究，人的自律是有限的。我们要自己形成规律**，例如一周中有三个早上做运动，如果下午晚上才有空，那也行，行成一个时间规律。
 
 另一个阻碍定期运动的障碍，是一个有趣但经常被忽视的障碍，这个障碍非常强大，**潜意识障碍**。Nathaniel Branden谈过这点，我在我的书中也略谈过，引用了他的话。他谈到自尊，自尊隐含了一个概念：我们值得拥有幸福。当你问别人：“你值得拥有幸福吗？”大部会人会说“值得”，但在潜意识中，通常很多人都会说“不值得”，可能因为脑袋里有一把声音说“不值得”。因为过去老师，教育工作者，父母，重要的大人，社会大众都要我们向不现实的榜样看齐，所以通常在我们潜意识里有一把声音说“我不值得拥有幸福”。这是一个障碍，使我们无法更快乐。我们知道运动的其中一个作用是，可以说它是让我们变幸福的最强效药物。我们运动使人幸福，使人感觉良好，但如果我的潜意识认为，我不值得拥有这些感觉，不值得幸福，它可能阻止我运动。为什么？因为……大家回忆一下，意识不喜欢，潜意识与外界不一致。如果我潜意识认为“不应该快乐”，我就会听从我的潜意识，我就不会运动，因为我运动的话，就会与潜意识不一致，我会比潜意识认为的更幸福，在这个问题上有过很多的研究，例如心理学家Bill Swann讲过自我确认论。这是我们意识里一股很强大的力量，我们意识里有自我提高，我们想在别人和自己眼里表现出好的一面，但还有一股反作用力，就是自我确认，我们想确认对自己的了解是否属实，如果我们认为自己不值得幸福，通常我们就不会做让自己幸福的事。在其他方面也存在，例如在恋情中，如果我认为我不值得拥有好伴侣，不值得在恋情中得到幸福，通常我就会在潜意识里，破坏这段恋情，积极寻找恋情中不顺利的地方，潜意识中寻找方法伤害这段恋情，所以我们需要注意这些潜意识力量，通常它能影响我们会不会去做运动。我们该拿它怎么办？最好的办法就是运动。再一次说回来，把它规律化，不要分析太多，尽管去运动就行了。你知道一周三四次运动对你有益，尽管去做。再一次说到，即想即做法，潜意识会告诉你，“不要做，你没有时间，还有别的事要做，你明天再做，你下周再开始定期运动”为了达到目的，潜意识会很聪明地用尽各种方法，几乎能使你的行动听从潜意识。当你出去运动时，你就让自己看到“是的，我值得拥有幸福”。通常潜意识就会听从这个想法，所以尽管去运动。第二个是认识，这是认知层面的，认识运动的重要性，大家回忆Martin Seligaman说的“大部分人都专注于脖子以上”心理学家是这样，学术机构里的学生是这样，尤其是在这样的学校里大过专注于思考和认知。他们也正因此才能考上哈佛，才能成功。但专注于脖子以下，也同样重要。事实上，要获得幸福，脑袋的作用是有限的，所以我要告诉大家，如果我是心理医生，我治人的第一件事就是要求他们运动。因为我不想违抗自然，我想借助自然的力量来治人。很大程度上，运动是心理治疗中的“无名英雄”。它在很多方面都发挥了作用，John Ratey，刚才我提到过他，哈佛医学院教授，精神病医生。“某种程度上，运动可以说是精神医生的理想药物，它能对会焦虑症，恐慌症，普通的压力，压力和抑郁症有莫大关联，运动能释放神经递质。去甲肾上腺素，血清素，多巴安，这些物质与重要精神类药物相似，做一轮运动就像吃了一点百忧解，一点利他林，针对性很强。”正确的分量，正确的身体部位，没有副作用，也有副作用，积极的副作用，身体，精神和情绪的副作用。
 
