--- a/23.md
+++ b/23.md
@@ -1,5 +1,7 @@
 \[第二十三课\]《自尊与自我实现》字屏
 
+**\[第23集\] 收获交流**
+
 我们今天早上和班上的助教吃了早餐，这是我们最后一次的早餐聚餐，我有点伤心，希望上完这节课后能开心一点。今天我们会讲完自尊，下节课是我们最后一次上课，至少是这个学期。我会总结一下我们讲过的内容，我们讲过的和我们将要讲的内容。  
 先回顾一下我们讲过的，就在幻灯片上，有很多研究，有很多观点都说了自尊有多重要。自尊确实很重要，有研究表明它与我们的健康、成功有关，低自尊通常与犯罪、药物滥用、心情低落、焦虑、抑郁有关，所以自尊很重要，这我们知道，但是在自尊这个课题里也不是天下太平的，我们上节课讲过了，问题之一就是自相矛盾的证据，一方面，高自尊的人通常都仁慈、慷慨和富有同情心，但另一方面高自尊的人又会表现出敌意、缺乏合作精神、有抵触情绪。另一问题就是人们误解自尊对表现的影响，对幸福的影响，以及当中的原因，自尊的矛盾，有时候我们觉得自己表现很优秀，受到很多赞扬，但自尊上升后，很快又回落到基本水平，甚至更糟，因为我们要尽更大努力才能让自尊回到基本水平，我们要得到更多的赞扬，取得更多的成就，做什么都不够了。所以有证明表明自尊的来源以及它的后果存在矛盾，解释这些矛盾的方法之一就是借鉴别人的研究，例如Maslow,Nathaniel Branden或者Carl Rogers,RolloMay Lovinger。  
 看看我们怎么分解自尊的基本构成，这就是我的论文的内容，也是上节课我跟大家讲的内容，基本上就是讲了自尊这个领域里的研究人员的观点，那些思考这个问题的人，例如马路对面的教育学院的Robert Kegan,他研究自尊的角度更倾向于发展心理学，我给大家介绍了那个渐成模型，渐成，再说一次，他的意思就是必须实现了一层，或者至少部分实现了一层，才能去到下一层，这三层分别是依赖型自尊、独立型自尊和无条件型自尊。依赖型自尊，它有两个构成部分。首先，有高度依赖型自尊的人时刻需要他人的赞扬，不管是选择职业还是决定下午做什么这样的小事，都是根据他人的认同来做决定的，有依赖型自尊的人在能力感方面总是拿自己跟别人比较，我比他们好还是差？比他们优秀还是不如他们？独立型自尊是一种取决于自我的自尊，这样的人在评价自己时用的是自己的意见，他们的能力感取决于自己认为自己进步了多少、改善了多少、觉得自己的潜力发挥了多少，这就是独立型自尊，并不取决于他人的言论或想法。无条件型自尊是最高层次的自尊，也就是Maslow所说的“自我实现”，David Schnarch所说的“分化良好型”想被了解，而不是被认可，无条件型自尊是指我们的自尊高到让我们对自己感觉很好，所以我们并不在乎别人怎么看自己，甚至不在乎自己怎么看自己。在比较方面，我们不会比较，我们是相互依存的，相互联系的。我上节课举的一个例子是写书，假设我出版一本好书，我是一个高度依赖型自尊的人，首先，我写这本书，我出版这本书是我为了得到赞扬，我的首要动机是获得外界认同，我的的首要动机是想出版一本比别人的书都好的书，相比较而获得的能力感以及取决与外界。又假设我写了一本书，我是一个高度独立型自尊的人，我写了书，我自己评价“这是一本好书”或者“这本书不怎么样，需要修改”。在比较方面，我跟自己比较“我比起刚开始写时进步了很多，这本书比我之前一本要好，我的书写得更真实了。”这是独立型自尊的评价。无条件型自尊，是我们所知的最高层次自尊，我写了一本书，我不在乎评价，不管它是好事坏，我当然想变得越来越好，但这并不影响我对自己的感觉，我就是我，我写了这本书，我处于心流状态，我体验这种经历，至于这本书是不是比别人的好或者比我以前写的好，这都不重要，我高兴的是我写了一本书，如果别人也写了一本书，我也同样替他感到高兴，别人写了一本更好的书，我会同样高兴，甚至更高兴这本书更能帮助到人。这个模型有很重要的一点是需要明白的，我们从很小的年纪开始就有这三层自尊，并非只有吹喇叭那个或特雷沙修女、曼德拉或者玛格丽特米德这样的名人才是自我实现的人，他们并不是不在乎别人的看法，但他们大部分时候都是自决的，做自己相信的事，和他人相互联系，想让世界变得更美好。但他们并不在乎，并非他们评价自己时不会跟自己比较、也不会跟别人比较，这是人的天性。我犯过一个错误，当我开始这个研究时我跟自己说“好的，我想有独立型自尊。”当后来我明白无条件型自尊是什么时我说“我想有无条件型自尊。”我把这两种自尊列为好的，把依赖型自尊列为坏的，结果呢？只加剧了我对他人的依赖，因为当我们有违天性时，天性就会跟我们作对，我们赢不了。就像第二节课一样，如果我跟自己说“Tal别紧张，别紧张，别心急。”结果呢？我看到粉红色大象出来了，我变得更焦虑更紧张了，但当我接受这种天性时，放任它，不强求自己，它就顿时威力大减，因为我可以说“好的，这个人不喜欢我的书，我无所谓，不喜欢我的课，无所谓。”我接受它，这是天性，我会伤心，我当然想他们都喜欢。但转念一想，我就想通了“我要怎样做才能活出自我？我作为一个老师要怎样才能被了解，而不是整天想着得到别人的认同？”积极接受，回顾一下，接受我的天性，然后决定最合适的是做法是什么。  
@@ -11,8 +13,8 @@
 有独立型自尊的人活到老学到老，回忆一下John Carlton的研究，在哈佛商学院的毕业生中，优等生与别的学生之间的区别就是，他们总是问问题，他们总是想学更多，他们不会从大学或商学院毕业后，或者读完博士诸如此类的学位后，说“我懂得够多了”，“现在我是经理了，现在我是领导了，我会告诉人们因该做什么。”这是Warren Bennis的一个优点，他总是问问题，他对别人做的事感兴趣，他总是在学习。  
 我等一下会给大家看一个研究，当我们有独立型自尊时，我们的幸福感会更高，我们会更平静，我们不会不停地向别人证明自己，总是处于警惕状态是一件很劳心劳力的事。这个人会喜欢我吗？我这么得到他们的认同？当我们这样想时，我们会更平静,“让我表达自己，没错，我也许会受伤害，如果他们不喜欢我，我会伤心。没问题，我承受得住，我很坚强，我可以接受。”存在感更平静了，当我们表达自己，而不是时刻想着表现自己，想象一下我们的生活会变得多轻松。如果，当我们在教室时，或者当我们走出教室时，我们感受到这种存在感越来越多地...重申一次，不是完全地，因为这有违人的天性。但我们可以越来越多地单纯地存在，感激我们的存在，作为一个整体存在。  
 我给大家讲几个研究，这样的研究不是很多。我想给大家讲我做的一些研究，是我读博士学位时做的，后来还继续做了一点。第一个研究时关于自尊的矛盾。也就是说，有些人得到很多赞扬，但他们的自尊下降了。而那些有很高自尊的人，有些有敌对情绪，但有些却对别人宽厚仁慈。第一个研究时Kernis做的，他在1995年提出自尊稳定性这个概念，他说，真正能够预测一个人究竟是敌对还是宽厚，他们的自尊会随时间增高还是降低的，不是自尊本身而是自尊的稳定性，他发现...他追踪实验对象，例如，一两周，他会测评他们的状态自尊而不是特质自尊，他们当时的状态自尊。有些人...假设这里是自尊水平，这里是时间，在某个时候有些人的自尊在这里，然后第二天在这里，然后这里，然后又回到这里，这里...（上下波动）。假设他测了十次，他想测出这些数据分布的标准偏差，它有多接近？有多稳定？假设这个人平均来说有很高的自尊，但有很多起伏，有些人则像这样，也起起伏伏，有时有很大的起伏，但总体来说很稳定，同样水平的自尊，特质自尊，但状态自尊的起伏少了很多。他发现是自尊的稳定性而不是自尊本身决定了一个人是敌对还是仁慈，自尊不稳定的人更可能充满敌对情绪，而自尊更稳定的人更可能宽厚仁慈，这就解释了自尊理论的很多矛盾和误解。当我看到这个理论时，我顿悟了，亲身体验到一次顿悟，我说“就是它了，他找到答案了。”  
-我在2000年写我的硕士论文时，我设计了一个问卷，一个很简单的问卷，测量依赖型自尊和独立型自尊的对比。我测评学生，大部分是哈佛学生，我还在新加坡做了代表性抽样调查，我那时经常在新加坡，得出同样的结果，亚洲和美国的一样，至少新加坡和美国的一样。我发现，依赖型自尊与不稳定性有关，而独立型自尊与稳定性有关，换言之，我只测量了一次，而不是十次，到底这种自尊会导致敌对情绪、焦虑还是平静或宽厚，我只用了一个测量数据，我发现依赖性自尊与自尊不稳定性高度相关，两者成正比。而独立型自尊和自尊稳定性也成正比。当时我的一些学生也就此做了一些研究，例如Mellisa Christino,你们会在这门课上看到她写的一些东西，她本科时写的毕业论文就是表明独立型自尊和快乐，独立型自尊与心流的关系，那些有高度独立型自尊的人最有可能在运动场上体验到心流，因为这就是她的研究对象，哈佛运动员。高度独立自尊的人也有更高的幸福感。我的论文是想准确地找出自尊理论存在的问题，我说过，高度自尊意味着自恋，怎么区分这两者？我在论文里发现自恋其实是与高度依赖型自尊有关。而自恋与独立型自尊没有什么关系。之于宽厚，这也许是研究中最令人意外的结果，有独立型自尊的人其实更宽厚仁慈，不仅自我报告如此，对他人的行为也是如此，非常强烈的自我感，我说过，像爱自己一样爱你的邻居，己所不欲勿施于人，当你对自我有一个高标准时，对他人也会有一个高标准，通常这是无意识地发生的，因为我们怎么对待他人就会怎么对待自己。还有敌对情绪，敌对情绪与自尊本身没有关系，因为有些有高度自尊的人有很高的敌对情绪，但有些有高度自尊的人敌对情绪很低，而且更宽厚仁慈。但依赖型和独立型自尊能预测敌对情绪。那些有高度自尊的人，而且自尊主要是依赖型的，这样的人更可能...但也有例外，不是所有人都会这样。但平均来说，这样的人更可能表现出敌对，而那些有高度自尊，而且主要是独立型自尊的人会更坦率，合作，宽厚。  
-  
+我在2000年写我的硕士论文时，我设计了一个问卷，一个很简单的问卷，测量依赖型自尊和独立型自尊的对比。我测评学生，大部分是哈佛学生，我还在新加坡做了代表性抽样调查，我那时经常在新加坡，得出同样的结果，亚洲和美国的一样，至少新加坡和美国的一样。我发现，依赖型自尊与不稳定性有关，而独立型自尊与稳定性有关，换言之，我只测量了一次，而不是十次，到底这种自尊会导致敌对情绪、焦虑还是平静或宽厚，我只用了一个测量数据，我发现依赖性自尊与自尊不稳定性高度相关，两者成正比。而独立型自尊和自尊稳定性也成正比。当时我的一些学生也就此做了一些研究，例如Mellisa Christino,你们会在这门课上看到她写的一些东西，她本科时写的毕业论文就是表明独立型自尊和快乐，独立型自尊与心流的关系，那些有高度独立型自尊的人最有可能在运动场上体验到心流，因为这就是她的研究对象，哈佛运动员。高度独立自尊的人也有更高的幸福感。我的论文是想准确地找出自尊理论存在的问题，我说过，高度自尊意味着自恋，怎么区分这两者？我在论文里发现自恋其实是与高度依赖型自尊有关。而自恋与独立型自尊没有什么关系。之于宽厚，这也许是研究中最令人意外的结果，有独立型自尊的人其实更宽厚仁慈，不仅自我报告如此，对他人的行为也是如此，非常强烈的自我感，我说过，像爱自己一样爱你的邻居，己所不欲勿施于人，当你对自我有一个高标准时，对他人也会有一个高标准，通常这是无意识地发生的，因为我们怎么对待他人就会怎么对待自己。还有敌对情绪，敌对情绪与自尊本身没有关系，因为有些有高度自尊的人有很高的敌对情绪，但有些有高度自尊的人敌对情绪很低，而且更宽厚仁慈。但依赖型和独立型自尊能预测敌对情绪。那些有高度自尊的人，而且自尊主要是依赖型的，这样的人更可能...但也有例外，不是所有人都会这样。但平均来说，这样的人更可能表现出敌对，而那些有高度自尊，而且主要是独立型自尊的人会更坦率，合作，宽厚。
+
 完美主义。那时我有两个学生Tiffan Lgnaczyk和Kate Richey她是这个班的助教，做了一个很优秀的研究，表明完美主义和自尊的关系。有高度独立型自尊的人，他们是完美主义者的可能性更低。为什么？独立型自尊的人更注重表达自己，注重学习和成长。而学习和成长就必定要跌倒再爬起，学习只有这个途径，而依赖型自尊更注重...我上节课引用Mihnea Moldoveanu说的话，我们声称自己想要真相，但其实我们只是想自己是正确的，更依赖于他人的看法，更完美主义，更害怕失败，这同样适用于...我们之前讲过，但我想再说一次，适用于恋爱。这也是David Schnarch就这个课题所做的研究，我们说过我们怎么达到被了解的阶段，而不是被认可的阶段，这并不代表在七八十岁时，当我们完全进化了，我们并不喜欢，或者不需要我们的伴侣的认可。我们需要，但同时我们更关心的是表达自我。David Schnarch是这样说的：“分化是你维持自我感的能力。当你情绪上和/或身体上与别人亲近，尤其这些人变得对你越来越重要时，分化使你维持自己的道路。当爱人，朋友，家庭向你施压，让你同意和遵从时，分化良好的人能够同意，但又不会觉得你们‘失去自我’，能够不同意，但又不会觉得被排挤和难受。”这正是被了解的含义。你做自己，分化出来。这就是独立型自尊的核心，这是最高境界的相互依存的真谛。说来容易做来难，但用它来启发我们是非常有用的。在我们潜意识里当它发生时，能够注意到。因为在20岁这个年龄你们也会经历相互依存的时刻，与朋友家人产生真正的联系，走在后院里，欣赏美景，这些珍贵的时刻随着时间过去，我们会有越来越多。只要我们跟从这条自然的道路，自然的发展。继续用回走路那个比喻。我经常...我们知道历史上有很多故事，有些人被迫穿上太小的鞋子，或者被剥夺走路的自由，Ceausescu统治下的罗马尼亚就是这样，人们无法自然发展，当我们的自然发展被阻碍了，这是有可能的，我们就不能如我们所能的那样发展。所以在心理层面上也有这个问题，我们怎样才能如我们所能的发展？你们在这个学期所学到的一些方法，不管是认知的学习方法，允许自己有人的天性。还是你们具体地运用方法，例如写日记，做运动，学会感恩，冥想，练瑜伽，这些方法都是有助实现自我的方法，它们们能加速这个过程。当我们加速这个过程，就意味着此时此刻我们就能越来越多地体验到那种存在感。我们不用等到50、60或70岁，我们可以早早地就踏上那条健康的道路。  
 那么我们该怎么做？我们说回我们讲改变时讲过的那个模型。我们讲过改变的ABC，A是情感，B是行为，C是认知。我们说过改变的最重要方法，改变的最有效方法是B行为。我用一个模型讲过态度如何改变行为，反过来行为如何改变态度。大家回忆一下自我知觉理论，如果你想在某个生活领域得到改善，最好的方法就是自己的行为变得像改善了一样，如果我想要高度自尊，我的行为就要像一个有高度自尊的人。为什么？因为自尊就是一种态度，是我对自我的态度，是我对自己的评价。要提高这种态度我就要...或者说最有效的办法，不是唯一的办法，最有效的办法就是表现出一个有高度自尊的人的行为。所以榜样的作用很重要。我说的榜样不止一个，有榜样很重要，我们可以学习这些人，说：“我想有这样的性格...不，我想有Warren Bennis那样的平静、包容、和慷慨精神。我想有Marva Collins身上的那种对教学的热爱。”把榜样的所有优点综合起来，这样我们就能有他们那样的行为。并且慢慢地培养我们追求的那种态度。  
 我来讲一下提高自尊的几个方法，大部分都已经讲过了，所以这也算是很好地总结一下我们讲过的内容。首先有高度独立型自尊的人通常...正如我们之前从研究中看到的那样，包括Melissa Christino和其他人的研究。他们通常更平静，所以独立型自尊是一种态度，平静是一种行为，也就是说行为平静的人他们的独立型自尊会随着时间增加，我们在冥想相关的研究中看过，例如正念冥想，当我们越来越多地练习这种方法，我们的自尊，我们独立型的自尊，因为它不需要赞扬，“我今天冥想得真好，大家给我鼓掌。”这不是这种自尊的重点，它的重点是带来平静，关注自己，活出自己。又例如运动。运动能带来平静，因为它在体内释放某种酶，某些化学物质，这样随着时间过去它能直接增强我们的独立型自尊，因为行为体验了平静导致态度的转变。假设你中了一个无名咒语，从现在起在你的余生里，没有人会知道你在做什么，除了你自己，没有人知道你有多好，你有多宽厚，你有多仁慈。除了你自己没有人知道你有多富有多强大，你有多重要，只有你自己知道你的成就，只有你知道你有多好的操守道德和性格。在这样的一个世界里，你中了无名咒语，你会怎么做？有谁觉得很熟悉吗？你们会怎么做？正如我在课后作业里提过那样，这并不代表我们在匿名世界里怎么生活，在现实世界里就应该怎么生活。这个方法的意义是，在这样一个世界里，或者说做这样的练习，它能磨练我们，在抛开赞扬和声望的情况下我们会怎么做，我经常练习这个方法。大家知道在这个班上，我介绍给大家的方法我都一一练过，我都练过，我也像大家一样边上课边学习。我会经常用这个方法，例如，我在这里读研究生的时候，我当时的答案是在那样的一个世界里，我可能连博士学位都拿不到，我不会拿到博士学位，因为读博对我来说不是一件很愉快的事，虽然很有意义但没那么愉快，我读得不是很好，不觉得我自己有什么惊人能力。但我也跟自己说，在现实世界里，不是那个没人知道我在做什么的世界，而是在一个别人知道我在做什么的世界，我需要一个博士学位才能在大学任教，所以我继续学习，最终拿到了我的博士学位。我是在毕业前不久做这个练习的，我当时在考虑不同的出路，我想，在一个没有人知道我在做什么的世界里我会做什么？我的答案是教书，我的答案是我不会做研究，这是很肯定的。所以那时候我决定放弃争取终身任期，即使当时外界，那些关心我的人给了我很大的压力，他们说“再写两三篇文章你就能拿到一个很好的职位，争取终身任期，你能做到的，你的博士论文可以发表的。”但我知道我不想过那样的生活，我要为此付出代价吗？要，其中一个代价就是，这是我在哈佛的倒数第二课了，但我想要什么样的世界，我想过什么样的生活，这个方法帮助我找到了。你热爱什么？你真正想过的是怎么样的人生？你希望10年后，20年后你会变成什么样？什么对你来说是非常重要的？什么对你来说是重要的，就算没有别人的认同，点头，赞扬和欢呼，反对或批评，你也会做的？你在这样一个世界里会做什么？这是一个很重要的问题。  
@@ -22,6 +24,4 @@
 想想接下来的一个实验，今天做不了，很可惜，其实也不可惜，今天做不了。这个实验其实是重复Milgram的实验，但有一个改动，大家想象一下，有些同学熟悉Milgram实验，我们在班上已经讲过了，你坐在椅子里，手放在按钮上，或者在你面前有一个控制台，你选择60伏电压，那个学习者没有什么反应，你上升到75伏，增加了15伏，你升高到120伏，那个被点击的人，你觉得他真的被点击了，他说“哎哟，很痛”。你抬起头看那个穿白袍的人，他说“实验必须继续。”你继续提高电压，那个人被点击得尖叫，告诉你他要心脏病发了。你抬头看实验人员，他看起来就像那样，他告诉你...我之前一直没注意过他，很高兴我从没注意过他，他跟你说“实验必须继续”。你继续，那些人开始大哭起来“我有心脏病，快放我出去”。你抬头看，实验人员说“没有答案是错误的答案，提高电压，实验必须继续”。这时63%的参与者会把电压提高到350伏，超过那个人所能承受的水平，他们继续点击到，直到XXX点超过了危险水平。因为他告诉他们，实验必须继续。现在想象一下，同样的实验，但有一个小小的改动。你用75伏电压电他们，他们说“哎哟，很痛”。然后实验人员告诉你“实验必须继续，不如你先休息15分钟”。你出去15分钟，等你回来时，这时是90伏，假设你提高到120伏，120伏，那个人在尖叫“放我出去，你们没权把我关在这里”。你抬头看实验人员，他告诉你“实验必须继续，不如你先休息15分钟？”。你们认为这时会怎么样，如果这些人点击人之前有15分钟的时间休息？你认为会有63%的人会把电压提高到超过危险水平吗？很可能不会。因为在这15分钟里，我们不再处于热态，而是处于冷态。这是引用George Loewenstein的话。当他们处于冷态时，他们会想“我疯了吗？我在这里干什么？”他们会去打电话报警，而不是15分钟后再走进去。“好的，现在我愿意杀了他们”。因为他们在这个实验里就是以为自己杀了这些人。如果他们没有15分钟，而是“实验必须继续”，“实验必须继续”他们就会继续。他们会为失去自我付出代价。我们的现代生活也是这样，当然后果没有Milgram的实验那么可怕。而且现代，即使我们服从威权，我们也没做什么不道德的事，但通常我们会伤害到自己，因为我们随波逐流，遵从主流，我们做别人认为我们该做的事，我们做那把声音叫我们做的事，我们没有做自己想做的事。你们知道我认为这门课最重要的部分是什么吗？是课堂和课后作业。我这么说不是因为谦虚，没错，我想你们觉得我谦虚，但这不是我，这么说的原因而是因为这时候你们有时间思考，和你们的助教讨论，和你们的同学讨论，思考，你们被迫用额外时间来思考，这时你们坐下写课后作业，回答我提出的问题，这时你们真正的独立自我浮现了，这时你跟朋友谈这门课，或者在食堂跟队友分享，这时你有时间和你的父母分享，这时独立自我就出现了。最后，正直。Nathaniel Branden和其他很多病人这样做过，他是心理治疗师，他叫病人来，告诉他们“好的，下周，暂停，不能说谎，要完全诚实坦白”。他发现这个方法，尤其是对那些会撒一点谎的病人来说，能够提高他们的自尊。我记得在1996年，96年或97年克林顿弹劾案正在审判，CNN请来DePaulo,她是维珍尼亚大学的一位教授，她专门研究说谎，他们采访了她，那是第一次我接触到她的研究，她在CNN上说她的研究发现，基本上所有人都说谎，很多时候都是一些小谎。为了让别人觉得自己很厉害，很多时候是大谎。她发现，人平均每天说三个谎。当我听到的时候，我轻笑了一声，“也许其他人每天说三次谎，但我不说谎”。我来解释一下为什么我不撒谎，这是真的。因为我读大学时写的毕业论文就是说诚实是会带来好处的，我当时既学心理学也学哲学，我对道德，自尊，动机感兴趣，我根据研究，根据亚里士多德，亚当?史密斯的哲学著作发现每次我们说谎，欺骗，不诚实时，要付出巨大的心理和情绪代价。所以我跟自己说“让我试试DePauio的方法”她的方法就是叫人讲完一段对话后，马上评估有哪些是真的，有哪些是说谎的，趁他们还清楚记得自己说过什么，他们会写一本日记，完全匿名的。所以我想“我会写，虽然我不说谎”因为我知道说谎的后果，因为我的论文就是写这个的，我是诚实这个课题的专家。我说我会写日记的，因为我想试验一下。就在我写日记的期间，有一天晚上我出去约会，一个我没见过的人，不是Arianna，是我妈妈给我介绍的，我妈和她妈说我们在同一间学校，然后我听说了她的一些很棒的事迹，我很激动，我们见了面以后就更加激动了，我们坐下来，吃饭聊天，很愉快。她是一个经济学家，非常成功的经济学家，她问我是做什么的，我告诉她我是心理学家，我用我全部的心理知识在她面前表现自己。她说“我也对心理学感兴趣”。我说“这一定会很顺利”我自己心里说的，不是跟她说。我学到了教训，刚开始约会时不要说这样的话。我们坐下来...要学会失败。我们坐下来聊天，然后她说“我刚读到一个心理学家的著作”。她说了这个人的名字，非常著名的一个心理学家，“你听说过他吧？”我完全不知道，她说的是谁，完全不知道。我记得我呆了一下，微笑地看着她“嗯，嗯”，然后我们继续聊。我没有注意到自己说谎了，但后来我回到家回想这次的对话，我说“慢着，我刚才跟她说谎了”。从那时起我就经常这么做，我指的是说谎。不，我经常这么做，从那时起我就坚持磨练自己的正直，用DePaulo说的方法，用Nathaniel Branden说的方法，非常留意我说的话，我这么说是为了表现自己而说的假话吗？我是不是说了小谎？因为你们要明白，当我们说实话时我们给自己传达了一个信息，我们给自己传达的信息是我的话是有价值的，我说的话很重要，我很重要。当我们不说，当我们说谎时，或者我们想不停地表现自己时，我们是在说“这样的我不够好”我需要成为另一个人，让别人来喜欢我，我需要知道这个心理学家，不然她就不喜欢我。而不是做真实的自己。选择被认同而不是被了解。用这个方法坚持一周，直到行为改变了我们的态度，我开始更重视我的话，当我跟自己传达我是谁，而不是想着让别人觉得自己很厉害时，当我肯定自己时，当我是不是地说“不”时，这样我就能我的生活。当我该说是的时候说是，即使这个“是”不是很受欢迎，但我应该这样说。还要从时间和空间上把这个方法扩展开来。首先从我自己开始，为什么写日记这么有用？为什么有移情心的治疗师，他们的治疗这么有效？因为我们活出了自我。我们没有想着在治疗师面前表现自己，一段时间后，我们打开心扉，我们没有想着在在日记里表现自己，我们活出了自我。从让我们感觉良好的日记扩展到亲近的人际关系和人。从一天一次对话中练习正直到坚持一周，然后坚持一生。想象一下，过这样的生活，当你不用再不停地表达或表现自己时，我们会感到多自由，我们能够被了解，能够活出自我，这样多轻松，多有力量，我们会觉得多正直和真实？我们会多快乐？  
 我想在下课前读一段Melissa Christino的日记，是她在她的毕业论文中引用的，当然这是得到她允许的。Melissa Chistino是哈佛本科毕业生，2002届。她是这样写的“你真正的潜力埋藏在你的灵魂深处，在你腹部最底处，在你的知识和紧张触及不到的地方埋藏在你的恐惧和焦虑之下。虽然它隐藏起来了，但它还在那里。我知道，因为我以前感受过它的存在，我知道别人也有，因为我见过别人做过奇迹一般的事，我们体内都有一股无可匹敌的潜力散发着微弱的光芒，当我们找到它时，它就会发出万丈光芒。”我们每个人都有这丝微光，如果我们助长它，培养它，他就会壮大，它就会壮大到超越自己，这时候，像Warren Bennis这样的人，像曼德拉这样的人，像Anita Roddick这样的人，像特雷莎修女这样的人。他们的存在，他们的存在，就能为别人散发出光芒。现在我想这样做，只剩四分钟，我想这样做，我会放一首歌给大家听，通常我会在上课前放的，但今天我想在最后才放。如果你们喜欢的话，可以闭上眼睛，听歌词。它们对你有什么意义，对你的生活有什么意义。所以如果你们喜欢，闭上眼睛听，听听以下的歌词。【歌词：我就是我，我独一无二，看我一眼，对我嗤之以鼻，或为我鼓掌，这是我的世界，我想拥有一点骄傲，我的世界在这里我不用躲藏，生命毫无价值，直到你能说，我就是我。】  
 睁开眼睛，来吧！上来。我就是我...好的，我们下去和他们一起跳.
-
-
 
