--- a/10.md
+++ b/10.md
@@ -1,8 +1,8 @@
-**幸福课第十讲**
+**\[第10集\] 如何去改变**
 
 早上好！今天要讲的是**变化**。今天很多事都会发生变化，我们之间的关系会发生变化，敬请关注啊！
 
-上节课结束的时候，我们谈到很多种不同的变化。第一种方式是**`渐进式的`**，好像滴水穿石，要花时间的、一点一点的、慢慢的；**`第二种方式是突发式的`**，好像用大锤开山劈石，凿出一条路，一个隧道。对于这两种变化，或是所有形式的变化，必须要注意的是：我们讲的重点是**要将变化持续下去**，而不是突然一变之后又恢复原状。因此要注意的是，变化并不是药到病除的灵丹妙药——即便当我们举起大锤，就是这举起来的动作，也需要我们在之前做很多准备的功夫。因此，举例来说，渐进式的变化，就好像每天都做感恩练习，慢慢成为一个更容易找寻美好的人，逐渐的看到更多积极的事物，一点一点的构建起新的神经通路。
+上节课结束的时候，我们谈到很多种不同的变化。第一种方式是`渐进式的`，好像滴水穿石，要花时间的、一点一点的、慢慢的；`第二种方式是突发式的`，好像用大锤开山劈石，凿出一条路，一个隧道。对于这两种变化，或是所有形式的变化，必须要注意的是：我们讲的重点是**要将变化持续下去**，而不是突然一变之后又恢复原状。因此要注意的是，变化并不是药到病除的灵丹妙药——即便当我们举起大锤，就是这举起来的动作，也需要我们在之前做很多准备的功夫。因此，举例来说，渐进式的变化，就好像每天都做感恩练习，慢慢成为一个更容易找寻美好的人，逐渐的看到更多积极的事物，一点一点的构建起新的神经通路。
 
 还记得我们之前说过的两个重要概念，神经塑性和新生神经元吗？因为通过了解和理解我们大脑的变化，我们自身也将更容易产生变化。Carol Dweck做过相关研究（我们之后谈到完美主义的时候还会提到她）。另外大锤的例子和探索经验是一回事——真知灼见不是凭空产生的，而是经过长时间准备后千锤百炼而得来的。大家都知道所谓的灵感来自于99%的汗水，所以说没有灵丹妙药，而且正是那种对灵丹妙药的笃信和渴求导致了今天抑郁症如此高发频发。因为大家都很郁闷，很失望，发现灵丹妙药不管用的时候，就觉得是自己出了问题。我在书里也写了很可能他们认为“如果做完这五件事，我的人生就会美满了”。结果五件事做完，我却没有变得更快乐，于是我就开始怀疑自己。其实没有灵丹妙药。任何事都需要时间。没有所谓什么“幸福生活五步走”。
 
@@ -89,6 +89,4 @@
 女士们，先生们，你们也许不会相信，但还是相信我，当我说这个对于我来说是在我的舒适区之外，实际上这已经都不在我的学习区之内了，已经到我的恐慌区了。上课之前备课的时候，你们知道我都是要做笔记的，所以我在这里写下要干什么。我跟助教们说，我刚写进笔记的时候，每次看过去，我都感到肾上腺素在胃里飙升。这就是在舒适区之外。现在我也是在舒适区之外。这就是为什么我要在下课前而不是刚上课的时候干这件事。关键是要达到最适度的不适感，我可能的确是有点太吓人了。但是关键是最适度的不适感。为什么呢？想要改变别无他法，我可以想一天想破头，一直说我要找到女性化的一面，我要更勇敢，我要释放出来，我可以想一整天，什么也不会发生的，什么也不会发生的，除非我们有真正的实质的行为改变，真正的实质的行为动作。当我们做到这一点的时候就天高任鸟飞了。
 
 谢谢大家！下周四再见！
-
-
 
