--- a/14.md
+++ b/14.md
@@ -1,4 +1,4 @@
-**幸福课第14讲**
+**\[第14集\] 过犹不及**
 
 各位早上好，早上好，很高兴又见到大家。希望你们度过了一个愉快的假期。恢复元气，释放压力。这也是今天的主题，我们接着上节课继续讲。上会我们提出，事实上，压力不是问题，这是压力研究最有趣，最令人惊讶，现在看来，也是最显著的发现。压力本身其实是件好事。就像在体育运动中，我们给肌肉以压力，肌肉就会发展，增长。我们心理上情感上给予自己压力，我们就会成长。变得更开朗，更坚强。从小在无菌环境里长大，从未受过外界任何压力，，对人是不利的，比如影响机体的细菌，会使人体产生抗体，所以在无菌环境中对我们是不利的。不仅指生理上婴儿的密闭环境，缺乏运动，还包括心里及感情。所以我们常常说，我希望你们遭受更多的失败，因为艰难困苦，能给予我们极大的锻炼。结束“目标设定”的课程后就会开始关于失败的课程，我们会讨论完美主义，也就是对待失败的态度。
 
@@ -43,6 +43,4 @@ Elbert Hubbard说过“一个人能犯的最大错误，就是害怕犯错。”
 “如果你想提高成功率，就要将失败率翻倍”我们已经讲过这项研究，天才的起源，历史上最成功的艺术家，最成功的科学家，也是失败最多的，经历过最多失败。爱迪生，达芬奇，米开朗琪罗，居里夫人，最成功的科学家与艺术家，经历过做多的失败。还有Jane Klam对节食成功，或成功开始运动的人士进行研究，她发现最成功的，有毅力坚持下来的人，都平均经历过5次失败，也就是说他们减肥5次，都没有成功，到了第五次，或者第六次，才成功并维持住的。运动也是如此，学会失败，从失败中学习，
 
 周四见
-
-
 
