--- a/6.md
+++ b/6.md
@@ -1,4 +1,4 @@
-\[第6集\] 乐观主义
+**\[第6集\] 乐观主义**
 
 希望各位度过了个愉快的周末，好了，直入主题。上回说到哪儿了，上回我们谈了环境的力量，谈到了信念是如何成为自我实现的预言，以及我们是如何通过环境，对他人产生期望及信念。这些信念会变成现实，还谈到了为什么说社会心理学。本质上是从，某些重要的实验开始的，比如米尔格伦实验，又称权利服从研究；比如津巴多的监狱实验，试验中，囚犯被关在…学生扮演囚犯及看守的角色，完全进入了角色，以至于，一周后实验被迫中止，而原计划是要进行两周。接着我们提出了一个问题，既然环境的力量如此巨大，能使人改变，那能否创造出一种强大但积极的环境，将人的最佳状态充分调动起来？答案是肯定的。我们对此做了深入分析，并谈到了，Langer教授以及她的研究。她让一群老人置身于仿20年前的环境中，要求他们装作回到20年前的生活，这些老人竟然变得年轻了，他们的智力水平提高了，记忆力提升了，视力听力也改善了，手指骨骼间的距离变小了，这是年轻的迹象。
 
