--- a/22.md
+++ b/22.md
@@ -6,13 +6,21 @@
 
 **另一个问题就是人们误解**，自尊对表现的影响，对幸福的影响，以及其中自尊的矛盾，有时候我们觉得自己表现得很优秀，受到很多赞扬，但自尊上升之后，很快又回落到基本水平，甚至更糟，因为我们要尽更大努力，才能让自尊回到基本水平，要得到更多赞扬和成就，做什么都不够了，**所以有证明表明自尊的来源以及它的后果，存在矛盾。**
 
-解释这些矛盾的**方法之一**就是**借鉴别人的研究**，例如Maslow，Nathaniel Branden或者Carl Rogers，Rollo May Lovinger，看看我们能怎么分解自尊的基本构成，这就是我的论文的内容，也就是我上节课讲的，基本上就是讲了自尊这个领域里的研究人员的观点，那些思考这些问题的人，比如马路对面教育学院的Robert Kegan，他研究自尊的角度更倾向于发展心理学，我给大家介绍了那个渐成模型渐成再说一次它的意思就是必须实现了一层或者至少部分实现了一层才能去到下一层这三层分别是1.**依赖型自尊 2.独立型自尊和3.无条件自尊。**
+解释这些矛盾的**方法之一**就是**借鉴别人的研究**，例如Maslow，Nathaniel Branden或者Carl Rogers，Rollo May Lovinger，看看我们能怎么分解自尊的基本构成，这就是我的论文的内容，也就是我上节课讲的内容，基本上就是讲了自尊这个领域里的研究人员的观点，那些思考这些问题的人，比如马路对面教育学院的Robert Kegan，他研究自尊的角度更倾向于发展心理学。
 
-**依赖型自尊**它有两个构成部分，**首先**，有高度依赖型自尊的人**时刻需要他人的赞扬**，不管是选择职业还是决定下午做什么这样的小事，都是根据他人的认同来做决定的，有依赖型自尊的人，**在能力感方面，总是拿自己跟别人比较**，我比他们好还是差？比他们优秀还是不如他们？
+我给大家介绍了那个渐成模型，渐成，再说一次，它的意思就是必须实现了一层，或者至少部分实现了一层，才能去到下一层。这三层分别是1.**依赖型自尊 2.独立型自尊和3.无条件自尊。**
 
-**独立型自尊**是一种取决于自我的自尊，这样的人在评价自己时，用的是自己的意见，他们的**能力感取决于**，自己认为自己进步了多少，改善了多少，觉得自己的潜力发挥了多少，这就是独立型自尊，并不取决于他人的言论或想法。
+1.**依赖型自尊**它有**两个**构成部分，**首先**，有高度依赖型自尊的人**时刻需要他人的赞扬**，不管是选择职业，还是决定下午做什么这样的小事，都是根据他人的认同来做决定的。有依赖型自尊的人，**在能力感方面，总是拿自己跟别人比较**，我比他们好还是差？比他们优秀还是不如他们？
 
-**无条件自尊**是最高层次的自尊，也就是Maslow说的“自我实现”David schnarch说的“分化良好型”，**想被了解，而不是被认可**，无条件型自尊是指我们的自尊高到，**让我们对自己感觉良好，所以我们并不在乎别人怎么看自己**，甚至不在乎自己怎么看自己，在比较方面，我们不会比较我们是相互依存的，相互联系的，我上节课举的一个例子是写书，假设我出版一本书我是一个高度依赖型自尊的人，首先我写这本书，出版这本书，是为了得到赞扬，我的首要动机是获得外界认同，我的首要动机是想出版一本比别人的书都好的书，相比较而获得的能力感以及取决于外界又假设我写了一本书我是一个高度独立型自尊的人我写了书我自己评价“这是本好书”或“这本书不怎样需要修改”，在比较方面，我跟我自己比较“我比起刚开始写时进步了很多”，这本书比我之前一本要好，我的书写得更真实了，这就是独立型自尊的评价，无条件型自尊是我们所知的最高层次自尊，我写了一本书我不在乎评价不管它是好是坏**我当然想变得越来越好但这并不影响我对自己的感觉**我就是我我写了这本书我处于心流状态我体验这种经历至于这本书是不是比别人的好或者比我以前写的好，**不重要，我高兴的是，我写成了一本书**，如果别人也写了一本书我也同样会替他感到高兴。别人写了一本更能帮助别人的好书我会同样高兴甚至更高兴。
+2.**独立型自尊**是一种取决于自我的自尊，这样的人在评价自己时，用的是自己的意见，他们的**能力感取决于**，自己认为自己进步了多少，改善了多少，觉得自己的潜力发挥了多少，这就是独立型自尊，并不取决于他人的言论或想法。
+
+3.**无条件自尊**是最高层次的自尊，也就是Maslow说的“自我实现”，David schnarch说的“分化良好型”，**想被了解，而不是被认可。**无条件型自尊是指我们的自尊高到，**让我们对自己感觉良好，所以我们并不在乎别人怎么看自己**，甚至不在乎自己怎么看自己。在比较方面，我们不会比较我们是相互依存的，相互联系的。
+
+我上节课举的一个例子是写书，假设我出版一本书我是一个**1.高度依赖型**自尊的人，首先我写这本书，出版这本书，是为了得到赞扬，我的首要动机是获得外界认同，我的首要动机是想出版一本比别人的书都好的书。所以这是相比较而获得的能力感，以及取决于外界。
+
+又假设我写了一本书我是**2.一个高度独立型**自尊的人，我写了书，我自己评价。“这是本好书”或“这本书不怎样需要修改”（自己跟自己说）。在比较方面，我跟我自己比较“我比起刚开始写时进步了很多”，"这本书比我之前一本要好，我的书写得更真实了"，这就是独立型自尊的评价.
+
+**3.无条件型自尊**是我们所知的最高层次自尊，我写了一本书，我不在乎评价，不管它是好是坏，**我当然想变得越来越好，但这并不影响我对自己的感觉。**我就是我，我写了这本书，我处于心流状态，我体验这种经历，至于这本书是不是比别人的好，或者比我以前写的好，**不重要，我高兴的是，我写成了一本书。**如果别人也写了一本书，我也同样会替他感到高兴。别人写了一本更好的书，我会同样高兴，甚至更高兴。
 
 这个模型有很重要的一点是需要明白的，**我们从很小的年纪开始就有这三层自尊**，并非只有吹喇叭那个或特蕾莎修女、曼德拉或者玛格丽特米德这样的名人才是自我实现的人，他们并不是不在乎别人的看法，但他们大部分时候，都是自觉的做自己相信的事和他人相互联系，想让世界变得更美好，但他们并非不在乎，并非他们评价自己时不会跟自己比较也不会跟他人比较，这是人的天性。
 
