--- a/22.md
+++ b/22.md
@@ -20,7 +20,7 @@
 
 又假设我写了一本书我是**2.一个高度独立型**自尊的人，我写了书，我自己评价。“这是本好书”或“这本书不怎样需要修改”（自己跟自己说）。在比较方面，我跟我自己比较“我比起刚开始写时进步了很多”，"这本书比我之前一本要好，我的书写得更真实了"，这就是独立型自尊的评价.
 
-**3.无条件型自尊**是我们所知的最高层次自尊，我写了一本书，我不在乎评价，不管它是好是坏，**我当然想变得越来越好，但这并不影响我对自己的感觉。**我就是我，我写了这本书，我处于心流状态，我体验这种经历，至于这本书是不是比别人的好，或者比我以前写的好，**不重要，我高兴的是，我写成了一本书。**如果别人也写了一本书，我也同样会替他感到高兴。别人写了一本更好的书，我会同样高兴，甚至更高兴。
+**3.无条件型自尊**是我们所知的最高层次自尊，我写了一本书，我不在乎评价，不管它是好是坏，**我当然想变得越来越好，但这并不影响我对自己的感觉。**我就是我，我写了这本书，我处于心流状态，我体验这种经历，至于这本书是不是比别人的好，或者比我以前写的好，**不重要，我高兴的是，我写成了一本书。**如果别人也写了一本书，我也同样会替他感到高兴。别人写了一本更好的书，我会同样高兴，甚至更高兴，这本书更能够帮助到人。
 
 这个模型有很重要的一点是需要明白的，**我们从很小的年纪开始就有这三层自尊**，并非只有吹喇叭那个或特蕾莎修女、曼德拉或者玛格丽特米德这样的名人才是自我实现的人，他们并不是不在乎别人的看法，但他们大部分时候，都是自觉的做自己相信的事和他人相互联系，想让世界变得更美好，但他们并非不在乎，并非他们评价自己时不会跟自己比较也不会跟他人比较，这是人的天性。
 
