--- a/22.md
+++ b/22.md
@@ -22,9 +22,9 @@
 
 **3.无条件型自尊**是我们所知的最高层次自尊，我写了一本书，我不在乎评价，不管它是好是坏，**我当然想变得越来越好，但这并不影响我对自己的感觉。**我就是我，我写了这本书，我处于心流状态，我体验这种经历，至于这本书是不是比别人的好，或者比我以前写的好，**不重要，我高兴的是，我写成了一本书。**如果别人也写了一本书，我也同样会替他感到高兴。别人写了一本更好的书，我会同样高兴，甚至更高兴，这本书更能够帮助到人。
 
-这个模型有很重要的一点是需要明白的，**我们从很小的年纪开始就有这三层自尊**，并非只有吹喇叭那个或特蕾莎修女、曼德拉或者玛格丽特米德这样的名人才是自我实现的人，他们并不是不在乎别人的看法，但他们大部分时候，都是自觉的做自己相信的事和他人相互联系，想让世界变得更美好，但他们并非不在乎，并非他们评价自己时不会跟自己比较也不会跟他人比较，这是人的天性。
+这个模型有很重要的一点是需要明白的，**我们从很小的年纪开始就有这三层自尊**，并非只有达赖喇嘛或特蕾莎修女、曼德拉或者玛格丽特米德这样的名人才是自我实现的人，他们并不是不在乎别人的看法，但他们大部分时候，都是自己决定的（自觉的），做自己相信的事，和他人相互联系，想让世界变得更美好，但他们并非不在乎，并非他们评价自己时不会跟自己比较也不会跟他人比较，这是人的天性。
 
-我犯过一个错误，我跟自己说，好的我想要有独立性自尊，当我后来明白无条件型自尊是什么时，我说，我想有无条件型自尊，我把这两种自尊列为好的，依赖自尊列为坏的，结果呢，只加剧了我对他人的依赖，**因为当我们有违天性时，天性就会跟我们作对，**我们赢不了就像第二节课一样，如果我跟自己说“Tal别紧张别紧张别心急”，结果呢？我看到粉红色大象出来了，我变得更焦虑更紧张了，**但当我接受这种天性时，放任它不强求自己，它就顿时威力大减，**因为我可以说“好的，这个人不喜欢我的书，我无所谓；不喜欢我的课，无所谓”，我接受它，这是天性，我会伤心，我当然想他们都喜欢。**但转念一想，我就想通了，“我要怎样做才能活出自我？**我作为一个老师要怎样才能被了解，而不是整天想着得到别人的认同？”**积极接受**，回顾一下，接受我的天性，然后决定最适合的做法是什么。
+我犯过一个错误，当我开始这个研究的时候，我跟自己说，"好的我想要有独立性自尊"，当我后来明白无条件型自尊是什么时，我说，"我想有无条件型自尊"，我把这两种自尊列为好的，把依赖型自尊列为坏的，结果呢？只加剧了我对他人的依赖。**因为当我们有违天性时，天性就会跟我们作对，**我们赢不了。就像第二节课一样，如果我跟自己说“Tal别紧张别紧张别心急”，结果呢？我看到粉红色大象出来了，我变得更焦虑更紧张了，**但当我接受这种天性时，放任它，不强求自己，它就顿时威力大减，**因为我可以说“好的，这个人不喜欢我的书，我无所谓；不喜欢我的课，无所谓”，我接受它，这是天性，我会伤心，我当然想他们都喜欢。**但转念一想，我就想通了，“我要怎样做才能活出自我？**我作为一个老师要怎样才能被了解，而不是整天想着得到别人的认同？”1.**积极接受**，**2.回顾一下，3.接受我的天性，4.然后决定最适合的做法是什么。**
 
 我的榜样之一是warren Bennis，在领导才能这个领域，做过很多研究演讲和工作，他先在南加州大学教旁听课，后来才来到哈弗和麻省理工，他来哈弗商学院教了三年，第一年作为客座教授第一年，我上了他的班，一次非常特别的经历，第二年他教那个班时，我当了他的助教，我经常和他一起工作互动，我经常为Warren折服，他当时80，现在83岁了，他走进教室时，整间教室都亮起来了，他的微笑姿势直率，他丰富的表达都是为了和同学发生互动，他的一举一动让其他人对自己感觉更好了，他自信坚强，我把这样的人视为自我实现的人，**他有很高的无条件自尊。**我们走得很近，他在很多方面都给予了我很大的帮助。最大的帮助就是，他活出自我。我观察他、学习他、吸收他、给这个世界带来的东西，**吸收他**每天给数百万读他的书的人，听他演讲的人和他有过接触的人，**所带来的知识**。（**吸收他的知识**）
 
