--- a/22.md
+++ b/22.md
@@ -26,23 +26,25 @@
 
 我犯过一个错误，当我开始这个研究的时候，我跟自己说，"好的我想要有独立性自尊"，当我后来明白无条件型自尊是什么时，我说，"我想有无条件型自尊"，我把这两种自尊列为好的，把依赖型自尊列为坏的，结果呢？只加剧了我对他人的依赖。**因为当我们有违天性时，天性就会跟我们作对，**我们赢不了。就像第二节课一样，如果我跟自己说“Tal别紧张别紧张别心急”，结果呢？我看到粉红色大象出来了，我变得更焦虑更紧张了，**但当我接受这种天性时，放任它，不强求自己，它就顿时威力大减，**因为我可以说“好的，这个人不喜欢我的书，我无所谓；不喜欢我的课，无所谓”，我接受它，这是天性，我会伤心，我当然想他们都喜欢。**但转念一想，我就想通了，“我要怎样做才能活出自我？**我作为一个老师要怎样才能被了解，而不是整天想着得到别人的认同？”1.**积极接受**，**2.回顾一下，3.接受我的天性，4.然后决定最适合的做法是什么。**
 
-我的榜样之一是warren Bennis，在领导才能这个领域，做过很多研究演讲和工作，他先在南加州大学教旁听课，后来才来到哈弗和麻省理工，他来哈弗商学院教了三年，第一年作为客座教授第一年，我上了他的班，一次非常特别的经历，第二年他教那个班时，我当了他的助教，我经常和他一起工作互动，我经常为Warren折服，他当时80，现在83岁了，他走进教室时，整间教室都亮起来了，他的微笑姿势直率，他丰富的表达都是为了和同学发生互动，他的一举一动让其他人对自己感觉更好了，他自信坚强，我把这样的人视为自我实现的人，**他有很高的无条件自尊。**我们走得很近，他在很多方面都给予了我很大的帮助。最大的帮助就是，他活出自我。我观察他、学习他、吸收他、给这个世界带来的东西，**吸收他**每天给数百万读他的书的人，听他演讲的人和他有过接触的人，**所带来的知识**。（**吸收他的知识**）
+我的榜样之一是warren Bennis，他在领导才能这个领域，做过很多研究演讲和工作。他先在南加州大学教旁听课，后来才来到哈弗和麻省理工，他来哈弗商学院教了三年。第一年，作为客座教授第一年，我上了他的班，一次非常特别的经历，第二年他教那个班时，我当了他的助教，我经常和他一起工作、互动，我经常为Warren折服，他当时80，现在83岁了，他走进教室时，整间教室都亮起来了，他的微笑、姿势、直率，他丰富的表达，都是为了和同学发生互动，**他的一举一动让其他人对自己感觉更好了**，他自信坚强，我把这样的人视为自我实现的人，**他有很高的无条件自尊。**
 
-几年后有一天，我是他的助教，我们关系很亲近，所以我问他：“Warren，你是怎么变成现在这样的？”他回应时，把手放在我肩膀看着我，带着一个平静接受慷慨的微笑说：“**Tal，我不是一出生就这样的**”。**他就只说了这一句，这就是我需要听到的答案。**
+我们走得很近，他在很多方面都给予了我很大的帮助。最大的帮助就是，他活出自我。我观察他、学习他、吸收他给这个世界带来的东西，**吸收他**每天给数百万读他的书的人，听他演讲的人和他有过接触的人，**所带来的知识**。（**吸收他的知识**）
+
+几年后有一天，我是他的助教，我们关系很亲近，所以我问他：“Warren，你是怎么变成现在这样的？”他回应时，把手放在我肩膀上，看着我，带着一个平静,接受,慷慨的微笑,说：“**Tal，我不是一出生就这样的**”。**他就只说了这一句，这就是我需要听到的答案。**
 
 因为在他的回答里，有很多重要的信息，而最重要的两个信息是，
 
-**第一个，**他是慢慢进步成这样的，需要时间，你不会在20岁或者四十岁时，一夜之间去到第三层自尊（无条件）。**变成一个自我实现的人需要时间，需要下功夫，需要一次次跌倒和站起来。学会失败，然后从失败中学习，需要学习，接受自己，需要敞开心扉接受伤害犯错，需要做一个彻彻底底的人，我不是一出生就这样的。**
+**第一个，**他是慢慢进步成这样的，需要时间，你不会在20岁或者40岁时，一夜之间,去到第三层自尊（无条件）,**变成一个自我实现的人,需要时间，需要下功夫，需要一次次跌倒和站起来，学会失败，然后从失败中学习，需要学习接受自己，需要敞开心扉，接受伤害、犯错，需要做一个彻彻底底的人。我不是一出生就这样的。**
 
-**第二个**信息是：他很诚恳，他很真实，他并没有说：“Tal别夸我我也不是很厉害过奖了”，他没有这样，他很真诚，他知道自己的价值，他自信，他没有虚伪的谦虚。当我开始思考自尊时，自尊的真正意义，Branden的著作中所写的意义，对了，他和Nathaniel Branden是好朋友，当我开始读Branden的书时，当我明白真正的自尊是什么时，我明白有高自尊的人都是谦虚的，你不需要显摆你们知道，自大自恋是自尊的对立，目中无人自以为是跟真正意义上的自我感是完全对立的。所以，当我明白了这点以后，我的一个重要**目标**就是:**变得谦虚，**最重要的目标。所以我越来越觉得，要让大家都知道我很谦虚。
+**第二个**信息是：他很诚恳，他很真实，他并没有说：“Tal，别夸我，我也不是很厉害，过奖了”，他没有这样，他很真诚，他知道自己的价值，他自信，他没有虚伪的谦虚。这让我想起，当我开始思考自尊时，自尊的真正意义，Branden的著作中所写的意义，对了，他和Nathaniel Branden是好朋友，当我开始读Branden的书时，当我明白真正的自尊是什么时，我明白有高自尊的人都是谦虚的，你不需要显摆。你们知道，自大自恋是自尊的对立。目中无人，自以为是跟真正意义上的自我感是完全对立的。所以，当我明白了这点以后，我的一个重要**目标**就是:**变得谦虚，**最重要的目标。所以我越来越觉得，要让大家都知道我很谦虚。
 
 英国哲学家Francis Bacon说，谦虚不过是换了个法子在显摆而已，这句话用在我身上最合适不过了。但对别人来说不总是这样，我认为Warren Bennis是真正的谦虚，我认为曼德拉，当他谦虚时他是真正的谦虚，但问题是你怎样才能达到那种层次的谦虚？
 
-你要达到那种层次的谦虚方法，就是活出自我，活得真实，走完这个过程，这个过程就像我们上节课说的那样，就像学习走路，我们刚出生时，我们连走路是什么都不知道，但慢慢地，我们能站起来，但我们需要别人扶着或者靠着什么东西，比如我们靠着桌子小心地走出第一步。慢慢地我们可以自己走了，但我们还是要想着第一步怎么迈，我们摔倒了就再爬起来，**学会失败或者一错再错**，然后我们继续走，我们心里时刻想着怎么抬起这条。当你观察婴儿学走路时，会觉得很神奇，他们需要调动很多东西才能完成这么简单的一个动作。过了一段时间后，婴儿变得更自信了，她开始跑了，她不再想着怎么走或跑，因为她自然地就会走了。
+**你要达到那种层次的谦虚，方法就是活出自我，活得真实**，走完这个过程，这个过程就像我们上节课说的那样，就像学习走路，我们刚出生时，我们连走路是什么都不知道，但慢慢地，我们能站起来，但我们需要别人扶着或者靠着什么东西，比如，我们靠着桌子小心地走出第一步。慢慢地我们可以自己走了，但我们还是要想着第一步怎么迈，我们摔倒了就再爬起来，**学会失败或者一错再错**，然后我们继续走，我们心里时刻想着怎么抬起这条腿。当你观察婴儿学走路时，会觉得很神奇，他们需要调动很多东西才能完成这么简单的一个动作。过了一段时间后，婴儿变得更自信了，她开始跑了，她不再想着怎么走或跑，因为她自然地就会走了。
 
-**自我感也是这样，**一开始我们没有自我，感区分不开我和妈妈或者世界上的其它物件。慢慢地，我们发展出自我感，但这个自我感是完全依赖外界的，不管是身体上还是心理上，我们都依赖于父母、重要的大人、哥哥或姐姐，然后过了一段时间，通常是到我们进入青春期后，我们开始获得独立，这时我们开始渴望听到自己的声音，想让别人听到自己的声音。青春期这段时间很难，对青少年来说难，对父母来说也难，**但这是自然的是进化的必经步骤。**
+**自我感也是这样，**一开始，我们没有自我，感区分不开我和妈妈，或者世界上的其它物件。慢慢地，我们发展出自我感，但这个自我感是完全依赖外界的，不管是身体上还是心理上，我们都依赖于父母、重要的大人、哥哥或姐姐，然后过了一段时间，通常是到我们进入青春期后，我们开始获得独立，这时我们开始渴望听到自己的声音，想让别人听到自己的声音。青春期这段时间很难，对青少年来说难，对父母来说也难，**但这是自然的，是进化的必经步骤。**
 
-这时候，我们需要我们的界限，但同时，我们有时候，又需要打破界限。我们需要试探现实，确定自我，然后随着时间流逝，如果我们这么做，随着时间过去，我们同时开始一个新过程，这个过程就是真正的分化，这时候独立的自我变得太强烈，我们能够与其他人连接得更好，再一次引用回讲恋爱课的内容，**Nathaniel说过，我们越独立，我们就越互相依存，**然后我们进步。这需要很长时间，如果我们没有依赖的一面，例如如果我们年少时没有得到任何赞扬，或者用Carl Rogers的话来说，无条件的自我关注，我们就会有这个需求，回忆一下那个渐成模型，我们不能跳过这一层，通常我们需要一个治疗师帮助我们找到无条件的自我关注，这样我们就能到达下一层，或者我们需要一段关系或几段人际关系，帮助我们培养无条件的自我关注，这样我们就能到达下一层。
+这时候，我们需要我们的界限，但同时，我们有时候又需要打破界限。我们需要试探现实，确定自我，然后随着时间流逝，如果我们这么做，随着时间过去，我们同时开始一个新过程，这个过程就是真正的分化，这时候独立的自我变得太强烈，我们能够与其他人连接得更好，再一次引用回讲恋爱课的内容，**Nathaniel说过，我们越独立，我们就越互相依存，**然后我们进步。这需要很长时间，如果我们没有依赖的一面，例如如果我们年少时没有得到任何赞扬，或者用Carl Rogers的话来说，无条件的自我关注，我们就会有这个需求，回忆一下那个渐成模型，我们不能跳过这一层，通常我们需要一个治疗师帮助我们找到无条件的自我关注，这样我们就能到达下一层，或者我们需要一段关系或几段人际关系，帮助我们培养无条件的自我关注，这样我们就能到达下一层。
 
 如果在我们青少年时期，不停地有人叫我们安静守规矩，阻止我们确立自我，活出自我，那么我们就不可能顺利地到达下一层。通常在以后的生活里，我们需要做的事就是，**首先**，要确立自己就像青少年那样，这样就能到达下一层，但不管怎样，**这个过程不会顺顺利利**，为什么？因为天下没有完美的父母，天下没有完美的成长环境，没有完美的老师帮助我们自然而顺利地通过这些阶段。这是不现实的，在地球上不存在。我们在艰苦中随着时间进步，克服困难，犯错跌倒再爬起来，慢慢地，独立的自我无条件的自尊开始浮现。我们对自己更有自信，M说他没有见过在45岁以下就自我实现的人，即使是那些自我实现的人仍然有残留的一丝丝独立型自尊和依赖性自尊，这种自尊是不会彻底消失的，但这时它变弱了，它不占主导地位。**这时的人不再执着于获得更多赞扬**，当别人不喜欢他们时就伤心欲绝，当自己不是最好时就伤心欲绝，他们接受了，他们会说，赢了固然是好，赢不了也无所谓（it would be nice to win this）。然后，他们会继续前进。他们会问“我怎样才能让世界变得更美好？”“我怎么把积极情绪带给别人？”
 
