--- a/22.md
+++ b/22.md
@@ -44,11 +44,15 @@
 
 **自我感也是这样，**一开始，我们没有自我，感区分不开我和妈妈，或者世界上的其它物件。慢慢地，我们发展出自我感，但这个自我感是完全依赖外界的，不管是身体上还是心理上，我们都依赖于父母、重要的大人、哥哥或姐姐，然后过了一段时间，通常是到我们进入青春期后，我们开始获得独立，这时我们开始渴望听到自己的声音，想让别人听到自己的声音。青春期这段时间很难，对青少年来说难，对父母来说也难，**但这是自然的，是进化的必经步骤。**
 
-这时候，我们需要我们的界限，但同时，我们有时候又需要打破界限。我们需要试探现实，确定自我，然后随着时间流逝，如果我们这么做，随着时间过去，我们同时开始一个新过程，这个过程就是真正的分化，这时候独立的自我变得太强烈，我们能够与其他人连接得更好，再一次引用回讲恋爱课的内容，**Nathaniel说过，我们越独立，我们就越互相依存，**然后我们进步。这需要很长时间，如果我们没有依赖的一面，例如如果我们年少时没有得到任何赞扬，或者用Carl Rogers的话来说，无条件的自我关注，我们就会有这个需求，回忆一下那个渐成模型，我们不能跳过这一层，通常我们需要一个治疗师帮助我们找到无条件的自我关注，这样我们就能到达下一层，或者我们需要一段关系或几段人际关系，帮助我们培养无条件的自我关注，这样我们就能到达下一层。
+这时候，我们需要我们的界限，但同时，我们有时候又需要打破界限。我们需要试探现实，确定自我，然后随着时间流逝，如果我们这么做，随着时间过去，我们同时开始一个新过程，这个过程就是真正的分化，这时候独立的自我变得太强烈，我们能够与其他人连接得更好，再一次引用回讲恋爱课的内容，**Nathaniel说过，我们越独立，我们就越互相依存，**然后我们进步，这需要很长时间。如果我们没有依赖的一面，例如如果我们年少时没有得到任何赞扬，或者用Carl Rogers的话来说，无条件的自我关注，我们就会有这个需求，回忆一下那个渐成模型，我们不能跳过这一层，通常我们需要一个治疗师，帮助我们找到无条件的自我关注，这样我们就能到达下一层，或者我们需要一段关系，或几段人际关系，帮助我们培养无条件的自我关注，这样我们就能到达下一层。
 
-如果在我们青少年时期，不停地有人叫我们安静守规矩，阻止我们确立自我，活出自我，那么我们就不可能顺利地到达下一层。通常在以后的生活里，我们需要做的事就是，**首先**，要确立自己就像青少年那样，这样就能到达下一层，但不管怎样，**这个过程不会顺顺利利**，为什么？因为天下没有完美的父母，天下没有完美的成长环境，没有完美的老师帮助我们自然而顺利地通过这些阶段。这是不现实的，在地球上不存在。我们在艰苦中随着时间进步，克服困难，犯错跌倒再爬起来，慢慢地，独立的自我无条件的自尊开始浮现。我们对自己更有自信，M说他没有见过在45岁以下就自我实现的人，即使是那些自我实现的人仍然有残留的一丝丝独立型自尊和依赖性自尊，这种自尊是不会彻底消失的，但这时它变弱了，它不占主导地位。**这时的人不再执着于获得更多赞扬**，当别人不喜欢他们时就伤心欲绝，当自己不是最好时就伤心欲绝，他们接受了，他们会说，赢了固然是好，赢不了也无所谓（it would be nice to win this）。然后，他们会继续前进。他们会问“我怎样才能让世界变得更美好？”“我怎么把积极情绪带给别人？”
+如果我们在青少年时期，不停地有人叫我们安静、守规矩，阻止我们确立自我，活出自我，那么我们就不可能顺利地到达下一层。
 
-M没见过45岁以下自我实现的人，Schnarch说要到五六十岁人才分化，酝酿出一段关系中最高层次的感情需要时间我，不是一生下来就这样的，正如Bennis指出，不是一生下来就这样的，非常重要的一个道理。
+通常在以后的生活里，我们需要做的事就是，**首先**，要确立自己就像青少年那样，这样就能到达下一层，但不管怎样，**这个过程不会顺顺利利**，为什么？因为天下没有完美的父母，天下没有完美的成长环境，没有完美的老师帮助我们自然而顺利地，通过这些阶段。这是不现实的，在地球上不存在。
+
+我们在艰苦中随着时间进步，克服困难，犯错、跌倒再爬起来，慢慢地，独立的自我、无条件的自尊开始浮现。我们对自己更有自信，Maslow说他没有见过在45岁以下就自我实现的人。即使是那些自我实现的人，仍然有残留的一丝丝独立型自尊和依赖性自尊，这种自尊是不会彻底消失的，但这时它变弱了，它不占主导地位。**这时的人不再执着于获得更多赞扬**，当别人不喜欢他们时就伤心欲绝，当自己不是最好时就伤心欲绝，他们接受了，他们会说，"赢了固然是好，赢不了也无所谓（it would be nice to win this）"。然后，他们会继续前进。他们会问“我怎样才能让世界变得更美好？”“我怎么把积极情绪带给别人？”
+
+Maslow没见过45岁以下自我实现的人，Schnarch说要到五六十岁，人才分化，才到酝酿出一段关系中最高层次的感情，这需要时间，"我不是一生下来就这样的"，正如Bennis指出，不是一生下来就这样的，非常重要的一个道理。
 
 很多人都问这个理论是不是放之四海皆准，因为你们知道独立或者说个人主义是西方文化或者说美国文化、西欧文化，如果你去非洲，这会很不同，群体的概念比个体的概念更重要。如果大家去亚洲国家，“我们”的概念，集体的概念，群体的概念，比个体的概念更重要。那在其他地方呢？这是一个专属于西方的理论吗？**答案是“不一定”**，**如果我们的目标是完全自我实现，或者用Rogers的话来说，在成为一个人的过程中，向着这个目标奋进**，那么最后相互依存这个最后阶段对所有文化来说都一样，所有文化都重视这一点，不同文化的人，这个过程可能看起来不同。美国人、日本人、埃及人、以色列人、津巴布韦人都各不相同，这个过程看起来不同，但它有很多相同之处，我在第三节课时讲过吹喇叭，那个他说他发现西方心理学的一个问题是，我们太着重文化差异了。
 
