--- a/22.md
+++ b/22.md
@@ -54,9 +54,11 @@
 
 Maslow没见过45岁以下自我实现的人，Schnarch说要到五六十岁，人才分化，才到酝酿出一段关系中最高层次的感情，这需要时间，"我不是一生下来就这样的"，正如Bennis指出，不是一生下来就这样的，非常重要的一个道理。
 
-很多人都问这个理论是不是放之四海皆准，因为你们知道独立或者说个人主义是西方文化或者说美国文化、西欧文化，如果你去非洲，这会很不同，群体的概念比个体的概念更重要。如果大家去亚洲国家，“我们”的概念，集体的概念，群体的概念，比个体的概念更重要。那在其他地方呢？这是一个专属于西方的理论吗？**答案是“不一定”**，**如果我们的目标是完全自我实现，或者用Rogers的话来说，在成为一个人的过程中，向着这个目标奋进**，那么最后相互依存这个最后阶段对所有文化来说都一样，所有文化都重视这一点，不同文化的人，这个过程可能看起来不同。美国人、日本人、埃及人、以色列人、津巴布韦人都各不相同，这个过程看起来不同，但它有很多相同之处，我在第三节课时讲过吹喇叭，那个他说他发现西方心理学的一个问题是，我们太着重文化差异了。
+很多人都问这个理论是不是放之四海皆准，因为你们知道，独立或者说个人主义是西方文化，或者说美国文化、西欧文化，如果你去非洲，这会很不同，群体的概念比个体的概念更重要。如果大家去亚洲国家，“我们”的概念，集体的概念，群体的概念，比个体的概念更重要。那在其他地方呢？这是一个专属于西方的理论吗？**答案是“不一定”**，**如果我们的目标是完全自我实现，或者用Rogers的话来说，在成为一个人的过程中，向着这个目标奋进**，那么最后，相互依存这个最后阶段对所有文化来说都一样，所有文化都重视这一点，不同文化的人，这个过程可能看起来不同。美国人、日本人、埃及人、以色列人、津巴布韦人都各不相同，这个过程看起来不同，但它有很多相同之处，我在第三节课时讲过达赖喇嘛，他说他发现西方心理学的一个问题是，我们太着重文化差异了。
 
-吹喇叭那个是一个文化触觉非常敏锐的人，他说差异确实存在，我们需要学习它们，但与此同时我们更需要学习相同之处。正是这些相同之处，把我们联合起来，团结起来，而且相同之处多不胜数，希望不久的将来会有越来越多人研究这个话题，并把它应用于不同的文化中，看看它与西方文化以外的世界有什么联系，因为我等一下提到的大部分研究，都是在美国做的，有一些是在英国，如果能看看别的地方，这个过程是如何的，那会很有趣，但它的核心是相似多于差异。
+达赖喇嘛那个是一个文化触觉非常敏锐的人，他说差异确实存在，我们需要学习它们，但与此同时我们更需要学习相同之处。正是这些相同之处把我们联合起来，团结起来，而且相同之处多不胜数，希望不久的将来会有越来越多人研究这个话题，并把它应用于不同的文化中，看看它与西方文化以外的世界有什么联系，因为我等一下提到的大部分研究，都是在美国做的，有一些是在英国，如果能看看别的地方，这个过程是如何的，那会很有趣，但它的核心是，相似多于差异。
+
+-------------
 
 **为什么独立很重要？为什么我们要奋力地到达独立阶段?为什么我们不应该遵从他人？依赖外界？**我的理由以及很多研究结果，还有很多历史事件，都表明：**培养独立是我们培养相互依存的一个重要途径。**
 
