--- a/17.md
+++ b/17.md
@@ -4,7 +4,7 @@
 
 研究发现它改善心理健康的效果，不如有氧运动，另外一种运动，在经过研究后，我要重申，这些都是初步结果，有人对这种运动做过初步研究，最后结果，因为样本不足，暂时无法下确切结论，但我们可以确切地说\_\_有氧运动产生的效果能媲美一些强效精神病药物\_\_，这个结论是确切的，有大量研究来支持，包括Babyak 2000年以来的研究，以及以前的另一种开始被研究的运动，得出可喜的结果，那就是\_\_间歇运动\_\_。间歇运动就是，以跑步为例子，达到最大心率的90%到95%。如果你20岁，你最大心率就是200，计算公式就是220减去年龄，所以你跑步的心率要达到180到190，强度非常高，不能持续很长时间，但如果能持续到30秒到一分钟，然后休息，让你的心率下降到最大心率的60%，也就是120，然后重复这个间歇运动。有初步表明这种运动，能产生显著效果，通常效果甚至比单纯有氧运动更大，而且持续时间更长。所以，再说回来，我没有在课堂上正式介绍这种运动，但很多同学问起，所以现在介绍一下。因为我只想给大家介绍那些有确切结论的运动，John Ratey也谈过这种运动，我等一下会讲他。他是哈佛医学院的精神医生，可以说他是一个前沿的倡导者，在研究运动和精神健康这个领域。他本身……虽然目前的结果是初步的，但他一周会做两次间歇运动，除了一周做六天运动以外，其中两天还会做全速短跑，休息，全速短跑，休息，研究表明即使没有做够30分钟，但还能得到同等的效果，同等的甚至更好的心理效果。我一周也会做两次间歇运动，所以，我举两个例子，今天早上我在蹦床上跳了30分钟，在这30分钟里，我还做了4个短跑，没错，你们不相信我会跳蹦床，是吧？我下次拍下来，还是不要了。4次短跑，我戴着心率监测仪，快速跑一段，我的心率大约是165，165到170之间，然后休息，下降到110，少于我最大心率的60%，如此重复四次，这30分钟里其余的时间，我只做缓和的有氧运动，所以我也做间歇运动，举重训练就比较少做，因为我做瑜伽时，就有这种加强体能的效果。但最重要的一点是，我想说，间歇运动，特别是对于完美主义者来说，很容易导致训练过度，大家最好不要达到最大心率，并且持续一段时间，即使你做得来，更多并不意味着更好。再说一次，除非你是备战奥运，这种情况下有时你就要达到，100%的最高心率，想练出最健康的身体，达到90%......最大心率的95%就行了。所以戴上心率监测仪就很有用，因为它能告诉你，运动是否强度太大，或者强度不足。总之，换换花样有助于运动，你可以跳舞，这也是好运动，你可以偶尔去健身室健身，偶尔打篮球，划艇，花样越多越好，只要保证，至少\_\_对我们来说，一周四次，一次30分钟的有氧运动。
 
-上节课，我们讲到**克服障碍**，其中一些障碍包括，**伴随运动而来的疼痛**，使运动更难了，即使你只达到最大心率的70%，运动引起不适，克服不适的最简单方法是进入状态，因为通常我们跑步进入一种状态后，我们就感受不到不适了，但必须开了头才行，找别人来支持你克服困难，慢慢适应，用一些东西分散注意力，例如是电视，MP3，能分散注意力就行了。另一个障碍，很不幸，这个障碍在校园很普遍，那就是我们\*\*没有时间\*\*，大家知道，在高中，我经常去高中演讲，我注意到的其中一件事是，通常，很多高中要求学生参加团队活动，他们除了体育课做运动外，还要参加团队活动，所以他们运动得更多，虽然还是不够，但是我们读大学第一件放弃的事，尤其是那些不参加团队活动的学生，我们放弃的第一件事就是运动。
+上节课，我们讲到**克服障碍**，其中一些障碍包括，**伴随运动而来的疼痛**，使运动更难了，即使你只达到最大心率的70%，运动引起不适，**克服不适的最简单方法是进入状态**，因为通常我们跑步进入一种状态后，我们就感受不到不适了，但必须开了头才行，找别人来支持你克服困难，慢慢适应，用一些东西分散注意力，例如是电视，MP3，能分散注意力就行了。另一个障碍，很不幸，这个障碍在校园很普遍，那就是我们\*\*没有时间\*\*，大家知道，在高中，我经常去高中演讲，我注意到的其中一件事是，通常，很多高中要求学生参加团队活动，他们除了体育课做运动外，还要参加团队活动，所以他们运动得更多，虽然还是不够，但是我们读大学第一件放弃的事，尤其是那些不参加团队活动的学生，我们放弃的第一件事就是运动。
 
 \`**我没有时间，我有很多事要做**\`，大学是一个新的世界，在考试期间，大家也首先就放弃运动，因为我们压力太大了，我有太多事要做了，其实，最不能放弃的是运动，最不能放弃的是运动。为什么？因为它是一项投资，虽然你失去了45分钟，你知道，运动30分钟之后洗衣个澡，我推荐大家这么做，虽然你失去了45分钟，但你获得了更多，这时间花得其所。为什么？因为做运动，记忆力提高，所以你更能充分利用学习时间，你的创造力提高了，精神更集中，不管你是否有多动症，有就更要运动了，或者你有患多动症的趋势，即使对于没有多动症的人来说，运动也能大大提高注意力集中，活力显著提高，所以这时间花得其所。大家还记得我讲过，壁球赛季末我停止运动的事吗？突然我觉得我有了很多时间，但我完成的工作反而少了，第一因为我的生活规律打乱了，第二因为我注意力没那么集中了，我创造力下降了，活力下降了。最不能放弃的是运动，尤其是在考试期间这种压力大的时候。克服时间不足这个问题，不能靠自律，之前我已经讲过了，**我们看过那个研究，人的自律是有限的。我们要自己形成规律**，例如一周中有三个早上做运动，如果下午晚上才有空，那也行，行成一个时间规律。
 
